--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02.md
@@ -9,311 +9,311 @@ title = "०२"
 मन्दस्मितैर्निन्दितशारदेन्दुं वन्देऽरविन्दासनसुन्दरि! त्वाम् ॥  
 अथ प्रजानामधिपः प्रभाते जायाप्रतिग्राहितगन्धमाल्याम् ।  
 वनाय पीतप्रतिबद्धवत्सां यशोधनो धेनुमृषेर्मुमोच ॥ 1 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/01.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/01.md"  newLevelForH1="4"> </div>
   
 तस्याः खुरन्यासपवित्रपुंसुमपांसुलानां धुरि कीर्तनीया ।  
 मार्गं मनुष्येश्वरधर्मपत्नी श्रुतेरिवार्थं स्मृतिरन्वगच्छत् ॥ 2 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/02.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/02.md"  newLevelForH1="4"> </div>
   
 निवर्त्य राजा दयितां दयालुस्तां सौरभेयीं सुरभिर्यशोभिः ।  
 पयोधरीभूतचतुःसमुद्रां जुगोप गोरूपधरामिवोर्वीम् ॥ 3 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/03.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/03.md"  newLevelForH1="4"> </div>
   
 व्रताय तेनानुचरेण धेनोर्न्यषेधि शेषोऽप्यनुयायिवर्गः ।  
 न चान्यतस्तस्य शरीररक्षा स्ववीर्यगुप्ता हि मनोः प्रसूतिः ॥ 4 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/04.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/04.md"  newLevelForH1="4"> </div>
   
 आस्वादवद्भिः कवलस्तृणानां कण्डूयनैर्दंशनिवारणैश्च ।  
 अव्याहतैः स्वैरगतैः स तस्याः सम्राट् समाराधनतत्परोऽभूत् ॥ 5 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/05.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/05.md"  newLevelForH1="4"> </div>
   
 स्थितः स्थितामुञ्चलितः प्रयातां निषेदुषीमासनबन्धधीरः ।  
 जलाभिलाषी जलमाददानां छायेव तां भूपतिरन्वगच्छत् ॥ 6 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/06.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/06.md"  newLevelForH1="4"> </div>
   
 स न्यस्तचिह्नामपि राजलक्ष्मीं तेजोविशेषानुमितां तधानः ।  
 आसीदनाविष्कृतदानराजिरन्तर्मदावस्थ इव द्विपेन्द्रः ॥ 7 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/07.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/07.md"  newLevelForH1="4"> </div>
   
 लताप्रतानोद्ग्रथितैः स कैशैरधिज्यधन्वा विचचार दावम् ।  
 रक्षापदेशान्मुनिहोमधेनोर्वन्यान्विनेष्यन्निव दुष्टसत्त्वान् ॥ 8 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/08.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/08.md"  newLevelForH1="4"> </div>
   
 'विसृष्ट-'इत्यादिभिः षड्भिः श्लोकैस्तस्य महामहिमतया द्रुमादयोऽपि राजोपचारं चक्रुरित्याह-  
 विसृष्टपार्श्वानुचरस्य तस्य पार्श्वद्रुमाः पाशभृता समस्य ।  
 उदीरयामासुरिवोन्मदानामालोकशब्दं वयसां विरावैः ॥ 9 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/09.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/09.md"  newLevelForH1="4"> </div>
   
 मरुत्प्रयुक्ताश्च मरुत्सखाभं तमर्च्यमारादभिवर्तमानम् ।  
 अवाकिरन्बाललताः प्रसूनैराचारलाजैरिव पौरकन्याः ॥ 10 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/10.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/10.md"  newLevelForH1="4"> </div>
   
 धनुर्भृतोऽप्यस्य दयार्द्रभावमाख्यातमन्तःकरणैर्विशङ्कैः ।  
 विलोकयन्त्यो वपुरापुरक्ष्णां प्रकामविस्तारफलं हरिण्यः ॥ 11 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/11.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/11.md"  newLevelForH1="4"> </div>
   
 स कीचकैर्मारुतपूर्णरन्ध्रैः कूजद्भिरापादितवंशकृत्यम् ।  
 शुश्राव कुञ्जेषु यशः स्वमुञ्चैरुद्गीयमानं वनदेवताभिः ॥ 12 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/12.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/12.md"  newLevelForH1="4"> </div>
   
 पृक्तस्तुषारैर्गिरिनिर्झराणामनोकहाकम्पितपुष्पगन्धी ।  
 तमातपक्लान्तमनातपत्रमाचारपूतं पवनः सिषेवे ॥ 13 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/13.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/13.md"  newLevelForH1="4"> </div>
   
 शशाम वृष्ट्यापि विना दवाग्निरासीद्विशेषो फलपुष्पवृद्धिः ।  
 ऊनं न सत्त्वेष्वधिको बबाधे तस्मिन्वनं गोप्तरि गाहमाने ॥ 14 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/14.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/14.md"  newLevelForH1="4"> </div>
   
 संचारपूतानि दिगन्तराणि कृत्वा दिनान्ते निलयाय गन्तुम् ।  
 प्रचक्रमे पल्लवरागताम्रा प्रभा पतङ्गस्य मुनेश्च धेनुः ॥ 15 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/15.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/15.md"  newLevelForH1="4"> </div>
   
 तां देवतापित्रतिथिक्रियार्थामन्वग्ययौ मध्यमलोकपालः ।  
 बभौ च सा मतेन सतां तेन श्रद्धेव साक्षाद्विधिनोपपन्ना ॥ 16 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/16.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/16.md"  newLevelForH1="4"> </div>
   
 स पल्वलोत्तीर्णवराहयूथान्यावासवृक्षोन्मुखबर्हिणानि ।  
 ययौ मृगाध्यासितशाद्वलानि श्यामायमानानि वनानि पश्यन् ॥ 17 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/17.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/17.md"  newLevelForH1="4"> </div>
   
 आपीनभारोद्वहनप्रयत्नाद्धृष्टिर्गुरुत्वाद्वपुषो नरेन्द्रः ।  
 उभावलंचक्रतुरञ्चिताभ्यां तपोवनावृत्तिपथं गताभ्याम् ॥ 18 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/18.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/18.md"  newLevelForH1="4"> </div>
   
 वसिष्ठधेनोरनुयायिनं तमावर्तमानं वनिता वनान्तात् ।  
 पपौ निमेषालसपक्ष्मपङ्क्तिरुपोषिताभ्यामिव लोचनाभ्याम् ॥ 19 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/19.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/19.md"  newLevelForH1="4"> </div>
   
 पुरस्कृता वर्त्मनि पार्थिवेन प्रत्युद्गता पार्थिवधर्मपत्न्या ।  
 तदन्तरे सा विरराज धेनुर्दिनक्षपामध्यगतेव संध्या ॥ 20 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/20.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/20.md"  newLevelForH1="4"> </div>
   
 प्रदक्षिणीकृत्य पयस्विनीं तां सुदक्षिणा साक्षतपात्रहस्ता ।  
 प्रणम्य चानर्च विशालमस्याः श्रृङ्गान्तरं द्वारमिवार्थसिद्धेः ॥ 21 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/21.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/21.md"  newLevelForH1="4"> </div>
   
 वत्सोत्सुकापि स्तिमिता सपर्यां प्रत्यग्रहीत्सेति ननन्दतुस्तौ ।  
 भक्त्योपपन्नेषु हि तद्विधानां प्रसादचिह्नानि पुरःफलानि ॥ 22 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/22.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/22.md"  newLevelForH1="4"> </div>
   
 गुरोः सदारस्य निपीड्य पादौ समाप्य सांध्वं च विधिं दिलीपः ।  
 दोहावसाने पुनरेव दोग्ध्रीं भेजे भुजोच्छिन्नरिपुर्निषण्णाम् ॥ 23 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/23.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/23.md"  newLevelForH1="4"> </div>
   
 तामन्तिकन्यस्तबलिप्रदीपामन्वास्य गोप्ता गृहीणीसहायः ।  
 क्रमेण सुप्तामनु संविवेश सुप्तोत्थितां प्रातरनूदतिष्ठत् ॥ 24 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/24.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/24.md"  newLevelForH1="4"> </div>
   
 इत्थं व्रतं धारयतः प्रजार्थं समं महिण्या महनीयकीर्तेः ।  
 सप्त व्यतीयुस्त्त्रिगुणानि तस्य दिनानि दीनोद्धरणोचितस्य ॥ 25 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/25.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/25.md"  newLevelForH1="4"> </div>
   
   
 अन्येद्युरात्मानुचरस्य भावं जिज्ञासमाना मुनिहोमधेनुः ।  
 गङ्गाप्रपातान्तविरूढशष्पं गौरीगुरोर्गह्वरमाविवेश ॥ 26 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/26.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/26.md"  newLevelForH1="4"> </div>
   
 सा दुष्प्रधर्षा मनसापि हिंस्रैरित्यद्रिशोभाप्रहितेक्षणेन ।  
 अलक्षिताभ्युत्पतनो नृपेण प्रसह्य सिंहः किल तां चकर्ष ॥ 27 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/27.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/27.md"  newLevelForH1="4"> </div>
   
 तदीयमाक्रन्दितमार्तसाधोर्गुहानिबद्धप्रतिशब्ददीर्घम् ।  
 रश्मिष्ववादाय नगेन्द्रसक्तां निवर्तयामास नृपस्य दृष्टिम् ॥ 28 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/28.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/28.md"  newLevelForH1="4"> </div>
   
 स पाटलायां गवि तस्थिवांसं धनुर्धरः केसरिणं ददर्श ।  
 अधित्यकायामिव धातुमय्यां लोध्रद्रुमं सानुमतः प्रफुल्लम् ॥ 29 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/29.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/29.md"  newLevelForH1="4"> </div>
   
 ततो मृगेन्द्रस्य मृगेन्द्रगामी वधाय वध्यस्य शरं शरण्यः ।  
 जाताभिषङ्गो नृपतिर्निषङ्गादुद्धर्तुमैच्छत्प्रसभोद्धृतारिः ॥ 30 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/30.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/30.md"  newLevelForH1="4"> </div>
   
 वामेतरस्तस्य करः प्रहर्तुर्नखप्रभाभूषितकङ्कपत्रे ।  
 सक्ताङ्गुलिः सायकपुङ्ख एव चित्रार्पितारम्भ इवावतस्थे ॥ 31 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/31.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/31.md"  newLevelForH1="4"> </div>
   
 बाहुप्रतिष्टम्भविवृद्धमन्युरभ्यर्णमागस्कृतमस्पृशद्भिः ।  
 राजा स्वतेजोभिरदह्यतान्तर्भोगीव मन्त्त्रौषधिरुद्धवीर्यः ॥ 32 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/32.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/32.md"  newLevelForH1="4"> </div>
   
 तमार्यगृह्यं निगृहीतधेनुर्मनुष्यवाचा मनुवंशकेतुम् ।  
 विस्माययन्विस्मितमात्मवृत्तौ सिंहोरुसत्त्वं निजगाद सिंहः ॥ 33 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/33.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/33.md"  newLevelForH1="4"> </div>
   
 अलं महीपाल! तव श्रमेण प्रयुक्तमप्यस्त्रमितो वृथा स्यात् ।  
 न पादणेन्मूलनशक्ति रंहः शिलोञ्चये मूर्च्छति मारुतस्य ॥ 34 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/34.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/34.md"  newLevelForH1="4"> </div>
   
 कैलासगौरं वृषमारुरुक्षोः पादार्पणानुग्रहपूतपृष्ठम् ।  
 अवेहि मां किंकरमष्टमूर्तेः कुम्भोदरं नाम निकुम्भमित्रम् ॥ 35 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/35.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/35.md"  newLevelForH1="4"> </div>
   
 अमुं पुरः पश्यसि देवदारुं पुत्रीकृतोऽसौ वृषभध्वजेन ।  
 यो हेमकुम्भस्तननिःसृतानां स्कन्दस्य मातुः पयसां रसज्ञः ॥ 36 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/36.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/36.md"  newLevelForH1="4"> </div>
   
 कण्डूयमानेन कटं कदाचिद्वन्यद्विपेनोन्मथिता त्वगस्य ।  
 अथैनमद्रेस्तनया शुशोच सेनान्यमालीढमिवासुरास्त्त्रैः ॥ 37 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/37.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/37.md"  newLevelForH1="4"> </div>
   
 तदाप्रभृत्येव वनद्विपानां त्रासार्थमस्मिन्नहमद्रिकुक्षौ ।  
 व्यापारितः शूलभृता विधाय सिंहत्वमङ्कागतसत्त्ववृत्ति ॥ 38 ।  
 तदेति॥ तदा तत्कालः प्रभृतिरादिर्यस्मिन्कर्मणि तत्तथा तदाप्रभृत्येव वनद्विपानां त्रासार्थं भयार्थं शूलभृता शिवेन । अङ्गंसमीपमागताः प्राप्ताः सत्त्वाः प्राणिनो वृत्तिर्यस्मिंस्तत्। 'अङ्कः समीप उत्सङ्गे चिह्ने स्थानापराधयोः' इति केशवः। सिंहत्वं विधाय। अस्मिन्नद्रिकुक्षौ गुहायामहं व्यापारितो नियुक्तः ॥ 38 ॥  
 तस्यालमेषा क्षुधितस्य तृप्त्यै प्रदिष्टकाला परमेश्वरेण ।  
 उपस्थिता शोणितपारणा मे सुरद्विषश्चान्द्रमसी सुधेव ॥ 39 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/39.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/39.md"  newLevelForH1="4"> </div>
   
 स त्वं निवर्तस्व विहाय लज्जां गुरोर्भवान्दर्शितशिष्यभक्तिः ।  
 शस्त्त्रेण रक्ष्यं यदशक्यरक्षं न तद्यशः शस्त्त्रभृतां क्षिणोति ॥ 40 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/40.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/40.md"  newLevelForH1="4"> </div>
   
 इति प्रगल्भं पुरुषाधिराजो मृगाधिराजस्य वचो निशम्य ।  
 प्रत्याहतास्त्त्रो गिरिशप्रभावादात्मन्यवज्ञां शिथिलीचकार ॥ 41 ॥  
 इति प्रगल्भं पुरुषाणामधिराजो नृप इति प्रगल्भं मृगाधिराजस्य वचोनिशम्य श्रुत्वा गिरिशस्येश्वरस्य प्रभावात्प्रत्याहतास्त्त्रः' कुण्ठितास्त्त्रः सन् आत्मनि विषयेऽववज्ञामपमानं शिथिलीचकार। तत्याजेत्यर्थः। अवज्ञातोऽहमिति निर्वेदं न प्रापेत्यर्थः। समानेषु हि क्षत्रियाणामभिमानः न सर्वेश्वरं प्रतीति भावः ॥ 41 ॥प्रत्यब्रवीञ्चैनमिषुप्रयोगे तत्पूर्वभङ्गे वितथप्रयत्नः ।  
 जडीकृतस्त्त्र्यम्बकवीक्षणेन वज्रं मुमुक्षन्निव वज्रपाणिः ॥ 42 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/42.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/42.md"  newLevelForH1="4"> </div>
   
 संरुद्धचेष्टस्य मृगेन्द्र! कामं हास्यं वचस्तद्यदहं विवक्षुः ।  
 अन्तर्गतं प्राणभृतां हि वेद सर्वं भवान्भावमतोऽभिधास्ये ॥ 43 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/43.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/43.md"  newLevelForH1="4"> </div>
   
 मान्यः स मे स्थावरजंगमानां सर्गस्थितिप्रत्यवहारहेतुः ।  
 गुरोरपीदं धनमाहिताग्नेर्नश्यत्पुरस्तादनुपेक्षणीयम् ॥ 44 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/44.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/44.md"  newLevelForH1="4"> </div>
   
 स त्वं मदीयेन शरीरवृत्तिं देहेन निर्वर्तयितुं प्रसीद ।  
 दिनावसानोत्सुकबालवत्सा विसृज्यतां धेनुरियं महर्षेः ॥ 45 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/45.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/45.md"  newLevelForH1="4"> </div>
   
 अथान्धकारं गिरिगह्वराणां दंष्ट्रामयूखैः शकलानि कुर्वन् ।  
 भूयः स भूतेश्वरपार्श्ववर्ती किंचिद्विहस्यार्थपतिं बभाषे ॥ 46 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/46.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/46.md"  newLevelForH1="4"> </div>
   
 एकातपत्रं जगतः प्रभुत्वं नवं वयः कान्तमिदं वपुश्च ।  
 अल्पस्य हेतोर्बहु हातुमिच्छन्विचारमूढः प्रतिभासि मे त्वम् ॥ 47 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/47.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/47.md"  newLevelForH1="4"> </div>
   
 भूतानुकम्पा तव चेदियं गौरेका भवेत्स्वस्तिमती त्वदन्ते ।  
 जीवन्पुनः शश्वदुपप्लवेभ्यः प्रजाः प्रजानाथ! पितेव पासि ॥ 48 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/48.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/48.md"  newLevelForH1="4"> </div>
   
 न धर्मलोपादियं प्रवृत्तिः किंतु गुरुभयादित्यत आह-  
 अथैकधेनोरपराधचण्डाद्गुरोः कृशानुप्रतिमाद्विभेषि ।  
 शक्योऽस्य मन्युर्भवता विनेतुं गाः कोटिशः स्पर्शयता घटोध्नीः ॥ 49 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/49.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/49.md"  newLevelForH1="4"> </div>
   
 तद्रक्ष कल्याणपरम्पराणां भोक्तारमूर्जस्वलमात्मदेहम् ।  
 महीतलस्पर्शनमात्रभिन्नमृद्धं हि राज्यं पदमैन्द्रमाहुः ॥ 50 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/50.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/50.md"  newLevelForH1="4"> </div>
   
 एतावदुक्त्वा विरते मृगेन्द्रे प्रतिस्वनेनास्य गुहागतेन ।  
 शिलोञ्चयोऽपि क्षितिपालमुञ्चैः प्रीत्या तमेवार्थमभाषतेव ॥ 51 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/51.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/51.md"  newLevelForH1="4"> </div>
   
 निशम्य देवानुचरस्य वाचं मनुष्यदेवः पुनरप्युवाच ।  
 धेन्वा तदध्यासितकातराक्ष्या निरीक्ष्यमाणः सुतरां दयासुः ॥ 52 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/52.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/52.md"  newLevelForH1="4"> </div>
   
   
 किमुवाचेत्याह-  
 क्षतात्किल त्रायत इत्युदग्रः क्षत्त्रस्य शब्दो भुवनेषु रूढः ।  
 राज्येन किं तद्विपरीतवृत्तेः प्राणैरुपक्रोशमलीमसैर्वा ॥ 53 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/53.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/53.md"  newLevelForH1="4"> </div>
   
 'अथैकधेनोः'(2।47)इत्यत्रोत्तरमाह-  
 कथं नु शक्योऽनुनयो महर्षेर्विश्राणनाञ्चान्यपयस्विनीनाम् ।  
 इमामनूनां सुरभेरवेहि रुद्रौजसा तु प्रहृतं त्वयाऽस्याम् ॥ 54 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/54.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/54.md"  newLevelForH1="4"> </div>
   
 तर्हि किं चिकीर्षितमित्यत्राह-  
 सेयं स्वदेहार्पणनिष्क्रयेण न्याय्या मया मोचयितुं भवत्तः ।  
 न पारणा स्याद्विहता तवैवं भवेदलुप्तश्च मुनेः क्रियार्थः ॥ 55 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/55.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/55.md"  newLevelForH1="4"> </div>
   
 अत्र भवानेव प्रमाणमित्याह-  
 भवानपीदं परवानवैति महान्हि यत्नस्तव देवदारौ ।  
 स्थातुं नियोक्तुर्न हि शक्यमग्रे विनाश्य रक्ष्यं स्वयमक्षतेन ॥ 56 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/56.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/56.md"  newLevelForH1="4"> </div>
   
 सर्वथा चैतदप्रतिहार्यमित्याह-  
 किमप्यहिंस्यस्तव चेन्मतोऽहं यशःशरीरे भव मे दयालुः ।  
 एकान्तविध्वंसिषु मद्विधानां पिण्डेष्वनास्था खलु भौतिकेषु ॥ 57 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/57.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/57.md"  newLevelForH1="4"> </div>
   
 सौहार्दादहमनुसरणीयोऽस्मीत्याह-  
 संबन्धमाभाषणपूर्वमाहुर्वृत्तः स नौ संगतयोर्वनान्ते ।  
 तद्भूतनाथानुग! नार्हसि त्वं संबन्धिनो मे प्रणयं विहन्तुम् ॥ 58 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/58.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/58.md"  newLevelForH1="4"> </div>
   
 तथेति गामुक्तवते दिलीपः सद्यः प्रतिष्टम्भविमुक्तबाहुः ।  
 सन्न्यस्तशस्त्त्रो हरये स्वदेहमुपानयत्पिण्डमिवामिषस्य ॥ 59 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/59.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/59.md"  newLevelForH1="4"> </div>
   
 तस्मिन्क्षणे पालयितुः प्रजानामुत्पश्यतः सिंहनिपातमुग्रम् ।  
 अवाङ्मुखस्योपरि पुष्पवृष्टिः पपात विद्याधरहस्तमुक्ता ॥ 60 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/60.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/60.md"  newLevelForH1="4"> </div>
   
 उत्तिष्ठ वत्सेत्यमृतायमानं वचो निशम्योत्थितमुत्थितः सन् ।  
 ददर्श राजा जननीमिव स्वां गामग्रतः प्रस्रविणीं न सिंहम् ॥ 61 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/61.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/61.md"  newLevelForH1="4"> </div>
   
 तं विस्मितं धेनुरुवाच साधो! मायां मयोद्भाव्य परीक्षितोऽसि ।  
 ऋषिप्रभावान्मयि नान्तकोऽपि प्रभुः प्रहर्तुं किमुतान्यहिंस्राः ॥ 62 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/62.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/62.md"  newLevelForH1="4"> </div>
   
 भक्त्या गुरौ मय्यनुकम्पया च प्रीतास्मि ते पुत्र! वरं वृणीष्व ।  
 न केवलानां पयसां प्रसूतिमवेहि मां कामदुघां प्रसन्नाम् ॥ 63 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/63.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/63.md"  newLevelForH1="4"> </div>
   
 ततः समानीय स मानितार्थी हस्तौ स्वहस्तार्जितवीरशब्दः ।  
 वंशस्य कर्तारमनन्तकीर्तिं सुदक्षिणायां तनयं ययाचे ॥ 64 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/64.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/64.md"  newLevelForH1="4"> </div>
   
 संतानकामाय तथेति कामं राज्ञे प्रतिश्रुत्य पयस्विनी सा ।  
 दुग्ध्वा पयः पत्रपुटे मदीयं पुत्रोपभुङ्क्ष्वेति तमादिदेश ॥ 65 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/65.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/65.md"  newLevelForH1="4"> </div>
     
 वत्सस्य होमार्थविधेश्च शेषमृषेरनुज्ञामधिगम्य मातः ।  
 ऊधस्यमिच्छामि तवोपभोक्तुं षष्ठांशमुर्व्या इव रक्षितायाः ॥ 66 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/66.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/66.md"  newLevelForH1="4"> </div>
   
 इत्थं क्षितीशेन वसिष्ठधेनुर्विज्ञापिता प्रीततरा बभूव ।  
 तदन्विता हैमवताञ्च कुक्षेः प्रत्याययावाश्रममश्रमेण ॥ 67 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/67.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/67.md"  newLevelForH1="4"> </div>
   
 तस्याः प्रसन्नेन्दुमुखः प्रसादं गुरुर्नृपाणां गुरवे निवेद्य ।  
 प्रहर्षचिह्नानुमितं प्रियायै शशंस वाचा पुनरुक्तयेव ॥ 68 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/68.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/68.md"  newLevelForH1="4"> </div>
   
 स नन्दिनीस्तन्यमनिन्दितात्मा सद्वत्सलो वत्सहुतावशेषम् ।  
 पपौ वसिष्ठेन कृताभ्यनुज्ञः शुभ्रं यशो मूर्तमिवातितृष्णः ॥ 69 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/69.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/69.md"  newLevelForH1="4"> </div>
   
 प्रातर्यथोक्तव्रतपारमान्ते प्रास्थानिकं स्वस्त्ययनं प्रयुज्य ।  
 तौ दंपती स्वां प्रति राजधानीं प्रस्थापयामास वशी वसिष्ठः ॥ 70 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/70.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/70.md"  newLevelForH1="4"> </div>
   
 प्रदक्षिणीकृत्य हुतं हुताशमनन्तरं भर्तुररुन्धतीं च ।  
 धेनुं सवत्सां च नृपः प्रतस्थे सन्मङ्गलोदग्रतप्रभावः ॥ 71 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/71.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/71.md"  newLevelForH1="4"> </div>
   
 श्रोत्राभिरामध्वनिना रथेन स धर्मपत्नीसहितः सहिष्णुः ।  
 ययावनुद्धातसुखेन मार्गं स्वेनेव पूर्णेन मनोरथेन ॥ 72 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/72.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/72.md"  newLevelForH1="4"> </div>
   
 तमाहितौत्सुक्यमदर्शनेन प्रजाः प्रजार्थव्रतकर्शिताङ्गम् ।  
 नेत्रैः पपुस्तृप्तिमनाप्नुवद्भिर्नवोदयं नाथमिवौषधीनाम् ॥ 73 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/73.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/73.md"  newLevelForH1="4"> </div>
   
 पुरंदरश्रीः पुरमुत्पताकं प्रविश्य पौरैरभिनन्द्यमानः ।  
 भुजे भुजंगेन्द्रसमानसारे भूयः स भूमेर्धुरमाससञ्ज ॥ 74 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/74.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/74.md"  newLevelForH1="4"> </div>
   
 अथ नयनसमुत्थं ज्योतिरत्रेरिव द्यौः  
 सुरसरिदिव तेजो वह्निनिष्ठ्यूतमैशम् ।  
 नरपतिकुलभूत्यै गर्भमाधत्त राज्ञी  
 गुरुभिरभिनिविष्टं लोकपालानुभावैः ॥ 75 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/75.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/75.md"  newLevelForH1="4"> </div>
   
 इति श्रीमहोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां संजीविनीसमाख्यायां द्वितीयः सर्गः ।  
