--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10.md
@@ -9,359 +9,359 @@ title = "१०"
 सद्भिः स्वश्रवणैर्नित्यं पेयं पापं प्रणोदितुम् ॥  
 पृथिवीं शासतस्तस्य पाकशासवतेजसः ।  
 किंचिदूनमनूनर्द्धेः शरदामयुतं ययौ ॥ 1 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/01.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/01.md"  newLevelForH1="4"> </div>
   
 न चोपलेभे पूर्वेषामृणनिर्मोक्षसाधनम् ।  
 सुताभिधानं स ज्योतिः सद्यः शोकतमोपहम् ॥ 2 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/02.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/02.md"  newLevelForH1="4"> </div>
   
 अतिष्ठत्प्रत्ययापेक्षसंततिः स चिरं नृपः ।  
 प्राङ्यन्थादनभिव्यक्तरत्नोत्पत्तिरिवार्णवः ॥ 3 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/03.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/03.md"  newLevelForH1="4"> </div>
   
 ऋष्यश्रृङ्गादयस्तस्य सन्तः सन्तानकाङ्क्षिणः ।  
 आरेभिरे जितात्मानः पुत्रीयामिष्टिमृत्विजः ॥ 4 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/04.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/04.md"  newLevelForH1="4"> </div>
   
 तस्मिन्नवसरे देवाः पौलस्त्योपप्लुता हरिम् ।  
 अभिजग्मुर्निदाघार्ताश्छायावृक्षमिवाध्वगाः ॥ 5 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/05.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/05.md"  newLevelForH1="4"> </div>
   
 ते च प्रापुरुदन्वन्तं बुबुधे चादिपूरुषः ।  
 अव्याक्षेपो भविष्यन्त्याः कार्यसिद्धेर्हि लक्षणम् ॥ 6 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/06.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/06.md"  newLevelForH1="4"> </div>
   
 भोगिभोगासनासीनं ददृशुस्तं दिवौकसः ।  
 तत्फणामण्डलोदर्चिर्मणिद्योतितविग्रहम् ॥ 7 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/07.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/07.md"  newLevelForH1="4"> </div>
   
 श्रियः पद्मनिषण्णायाःऋ क्षौमान्तरितमेखले ।  
 अङअके निक्षिप्तचरणमास्तीर्णकरपल्लवे ॥ 8 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/08.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/08.md"  newLevelForH1="4"> </div>
   
 प्रबुद्धपुण्डरीकाक्षं बालातपनिभांशुकम् ।  
 दिवसं शारदमिव प्रारम्भसुखदर्शनम् ॥ 9 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/09.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/09.md"  newLevelForH1="4"> </div>
   
 प्रभानुलिप्तश्रीवत्सं लक्ष्मीविभ्रमदर्पणम् ।  
 कौस्तुभाख्यमपां सारं बिभ्राणं बृहतोरसा ॥ 10 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/10.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/10.md"  newLevelForH1="4"> </div>
   
 बाहुभिर्विटपाकारैर्दिव्याभरणभूषितैः ।  
 आविर्भूतमपां मध्ये पारिजातमिवापरम् ॥ 11 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/11.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/11.md"  newLevelForH1="4"> </div>
   
 दैत्यस्त्रीगण्डलेखानां मदरागविलोपिभिः ।  
 हेतिभिश्चेतनावद्भिरुदीरितजयस्वनम् ॥ 12 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/12.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/12.md"  newLevelForH1="4"> </div>
   
 मुक्तशेषविरोधेन कुलिशव्रणलक्ष्मणा ।  
 उपस्थितं प्राञ्जलिना विनीतेन गरुत्मता ॥ 13 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/13.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/13.md"  newLevelForH1="4"> </div>
   
 योगनिद्रान्तविशदैः पावनैरवलोकनैः ।  
 भृग्वादीननुगृह्णन्तं सौखशायनिकानृषीन् ॥ 14 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/14.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/14.md"  newLevelForH1="4"> </div>
   
 प्रणिपत्य सुरास्तस्मै शमयित्रे सुरद्विषाम् ।  
 अथैनं तुष्टुवुः स्तुत्यमवाङ्मनसगोचरम् ॥ 15 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/15.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/15.md"  newLevelForH1="4"> </div>
   
 नमो विश्वसृजे पूर्वं विश्वं तदनु बिभ्रते ।  
 अथ विश्वस्य संहर्त्रे तुभ्यं त्रेधास्थितात्मने ॥ 16 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/16.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/16.md"  newLevelForH1="4"> </div>
   
 ननु कूटस्थस्य कथं त्रैरूप्यमित्याशङ्क्यौपाधिकमित्याह-  
 रसान्तराण्येकरसं यथा दिव्यं पयोऽश्नुते ।  
 देशे देशे गुणेष्वेवमवस्थास्त्वमविक्रियः ॥ 17 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/17.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/17.md"  newLevelForH1="4"> </div>
   
 अमेयो मितलोकस्त्वमनर्थी प्रार्थनावहः ।  
 अजितो जिष्णुरत्यन्तमव्यक्तो व्यक्तकारणम् ॥ 18 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/18.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/18.md"  newLevelForH1="4"> </div>
   
 हृदयस्थमनासन्नमकामं त्वां तपस्विनम् ।  
 दयालुमनघस्पृष्टं पुराणमजरं विदुः ॥ 19 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/19.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/19.md"  newLevelForH1="4"> </div>
   
 सर्वज्ञस्त्वमविज्ञातः सर्वयोनिस्त्वमात्मभूः ।  
 सर्वप्रभुरनीशस्त्वमेकस्त्वं सर्वरूपभाक् ॥ 20 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/20.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/20.md"  newLevelForH1="4"> </div>
   
 सप्तसामोपगीतं त्वां सप्तार्णवजलेशयम् ।  
 सप्तार्चिर्मुखमाचख्युः सप्तलोकैकसंश्रयम् ॥ 21 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/21.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/21.md"  newLevelForH1="4"> </div>
   
 चतुर्वर्गफलं ज्ञानं कालावस्थाश्चतुर्युगाः ।  
 चतुर्वर्णमयो लोकस्त्वत्तः सर्वं चतुर्मुखात् ॥ 22 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/22.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/22.md"  newLevelForH1="4"> </div>
   
 अभ्यासनिगृहीतेन मनसा हृदयाश्रयम् ।  
 ज्योतिर्मयं विचिन्वन्ति योगिनस्त्वां विमुक्तये ॥ 23 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/23.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/23.md"  newLevelForH1="4"> </div>
   
 अजस्य गृह्णतो जन्म निरीहस्य हतद्विपः ।  
 स्वपतो जागरूकस्य याथार्थ्यं वेद कस्तव? ॥ 24 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/24.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/24.md"  newLevelForH1="4"> </div>
   
 शब्दादीन्विषयान्भोक्तुं चरितुं दुश्चरं तपः ।  
 पर्याप्तोऽसि प्रजाः पातुमौदासीन्येन वर्तितुम् ॥ 25 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/25.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/25.md"  newLevelForH1="4"> </div>
   
 बहुधाप्यागमैर्भिन्नाः पन्थानः सिद्धिहेतवः ।  
 त्वय्येव निपतन्त्योधा जाह्नवीया इवार्णवे ॥ 26 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/26.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/26.md"  newLevelForH1="4"> </div>
   
 त्वय्यावेशितचित्तानां त्वत्समर्पितकर्मणाम् ।  
 गतिस्त्वं वीतरागाणामभूयःसंनिवृत्तये ॥ 27 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/27.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/27.md"  newLevelForH1="4"> </div>
   
 प्रत्यक्षोऽप्यपरिच्छेद्यो मह्यादिर्महिमा तव ।  
 आप्तवागनुमानाभ्यां साध्यं त्वां प्रति का कथा ॥ 28 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/28.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/28.md"  newLevelForH1="4"> </div>
   
 केवलं स्मरणेनैव पुनासि पुरुषं यतः ।  
 अनेन वृत्तयः शेषा निवेदितफलास्त्वयि ॥ 29 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/29.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/29.md"  newLevelForH1="4"> </div>
   
 उदधेरिव रत्नानि तेजांसीव विवस्वतः ।  
 स्तुतिभ्यो व्यतिरिच्यन्ते दूराणि चरितानि ते ॥ 30 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/30.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/30.md"  newLevelForH1="4"> </div>
   
 अनवाप्तमवाप्तयं न ते किंचन विद्यते ।  
 लोकानुग्रह एवैको हेतुस्ते जन्मकर्मणोः ॥ 31 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/31.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/31.md"  newLevelForH1="4"> </div>
   
 महिमानं यतुत्कीर्त्य तव संह्रियते वचः ।  
 श्रमेण तदशक्त्या वा न गुणानामियत्तया ॥ 32 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/32.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/32.md"  newLevelForH1="4"> </div>
   
 इति प्रसादयामासुस्ते सुरास्तमधोक्षजम् ।  
 भूतार्थव्याहृतिः सा हि न स्तुतिः परमेष्ठिनः ॥ 33 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/33.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/33.md"  newLevelForH1="4"> </div>
   
 तस्मै कुशलसंप्रश्नव्यञ्जितप्रीतये सुराः ।  
 भयमप्रलयोद्वेलादाचख्युर्नैर्ऋतोदधेः ॥ 34 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/34.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/34.md"  newLevelForH1="4"> </div>
   
 अथ वेलासमासन्नशैलरन्ध्रानुनादिना ।  
 स्वरेणोवाच भगवान् परिभूतार्णवध्वनिः ॥ 35 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/35.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/35.md"  newLevelForH1="4"> </div>
   
 पुराणस्य कवेस्तस्य वर्णस्थानसमीरिता ।  
 बभूव कृतसंस्कारा चरितार्थैव भारती ॥ 36 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/36.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/36.md"  newLevelForH1="4"> </div>
   
 बभौ सदशनज्योत्स्ना सा विभोर्वदनोद्गता ।  
 निर्यातशेषा चरणाद्गङ्गेवोर्ध्वप्रवर्तिनी ॥ 37 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/37.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/37.md"  newLevelForH1="4"> </div>
   
 यदाह भगवांस्तदाह-  
 जाने वो रक्षसाक्रान्तावनुभावपराक्रमौ ।  
 अङ्निनां तमसेवोभौ गुणौ प्रथममध्यमौ ॥ 38 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/38.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/38.md"  newLevelForH1="4"> </div>
   
 विदितं तप्यमानं च तेन मे भुवनत्रयम् ।  
 अकामोपनतेनेव साधोर्हृदयमेनसा ॥ 39 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/39.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/39.md"  newLevelForH1="4"> </div>
   
 कार्येषु चैककार्यत्वादभ्यर्थ्योऽस्मि न वज्रिणा ।  
 स्वयमेव हि वातोऽग्नेः सारथ्यं प्रतिपद्यते ॥ 40 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/40.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/40.md"  newLevelForH1="4"> </div>
   
 पुरा किल त्रिपुरारिप्रीणनाय स्वशिरांसि छिन्दता दशकंधरेण यद्दशमं शिरोऽवशेषितं तम्नञ्चक्रार्थमित्याह-  
 स्वासिधारापरिहृतः कामं चक्रस्य तेन मे ।  
 स्थापितो दशमो मूर्धा लभ्यांश इव रक्षसा ॥ 41 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/41.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/41.md"  newLevelForH1="4"> </div>
   
 तर्हि किं प्रागुपेक्षितमत आह-  
 स्रष्टुर्वरातिसर्गात्तु मया तस्य दुरात्मनः ।  
 अत्यारूढं रिपोः सोढं चन्दनेनेव भोगिनः ॥ 42 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/42.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/42.md"  newLevelForH1="4"> </div>
   
 संप्रति वरस्वरूपमाह-  
 धातारं तपसा प्रीतं ययाचे स हि राक्षसः ।  
 दैवात्सर्गादवध्यत्वं मर्त्येष्वास्थापराङ्मुखः ॥ 43 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/43.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/43.md"  newLevelForH1="4"> </div>
   
 तर्हि का गतिरित्याशङ्क्य मनुष्यावतारेण हनिष्यामीत्याह-  
 सोऽहं दाशरथिर्भूत्वा रणभूमेर्वलिक्षमम् ।  
 करिष्यामि शरैस्तीक्ष्णैस्तच्छिरःकमलोञ्चयम् ॥ 44 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/44.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/44.md"  newLevelForH1="4"> </div>
   
 अचिराद्यज्वभिर्भागं कल्पितं विधइवत्पुनः ।  
 मायाविभिरनालीढमादास्यध्वे निशाचरैः ॥ 45 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/45.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/45.md"  newLevelForH1="4"> </div>
   
 वैमानिकाः पुण्यकृतस्त्यजन्तु मरुतां पथि ।  
 पुष्पकालोकसंक्षोभं मेघावरणतत्पराः ॥ 46 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/46.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/46.md"  newLevelForH1="4"> </div>
   
 मोक्ष्यध्वे स्वर्गब्दीनां वेणीबन्धानदूषितान् ।  
 शापयन्त्रितपौलस्त्यबलात्कारकचग्रहैः ॥ 47 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/47.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/47.md"  newLevelForH1="4"> </div>
   
 रावणावग्रहक्लान्तमिति वागमृतेन सः ।  
 अभिवृष्य मरुत्सस्यं कृषअणमेघस्तिरोदधे ॥ 48 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/48.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/48.md"  newLevelForH1="4"> </div>
   
 पुरुहूतप्रभृतयः सुरकार्योद्यतं सुराः ।  
 अंशैरनुययुर्विष्णुं पुष्पैर्वायुमिव द्रुमाः ॥ 49 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/49.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/49.md"  newLevelForH1="4"> </div>
   
 अथ तस्य विशांपत्युरन्ते कामस्य कर्मणः ।  
 पुरुषः प्रबभूवाग्नेर्विस्मयेन सहर्त्विजाम् ॥ 50 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/50.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/50.md"  newLevelForH1="4"> </div>
   
 तमेव पुरुषं विशिनष्टि-  
 हेमपात्रगतं दोर्भ्यामादधानः पयश्चरुम् ।  
 अनुप्रवेशादाद्यस्य पुंसस्तेनापि दुर्वहम् ॥ 51 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/51.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/51.md"  newLevelForH1="4"> </div>
   
 प्राजापत्योपनीतं तदन्नं प्रत्यग्रहीन्नृपः ।  
 वृषेव पयसां सारमाविष्कृतमुदन्वता ॥ 52 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/52.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/52.md"  newLevelForH1="4"> </div>
   
 अनेन कथिता राज्ञो गुणास्तस्यान्यदुर्लभाः ।  
 प्रसूतिं चकमे तस्मिंस्त्रैलोक्यप्रभवोऽपि यत् ॥ 53 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/53.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/53.md"  newLevelForH1="4"> </div>
   
 स तेजो वैष्णवं पत्न्योर्विभेजे चरुसंज्ञितम् ।  
 द्यावापृथिव्योः प्रत्यग्रमहर्पतिरिवातपम् ॥ 54 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/54.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/54.md"  newLevelForH1="4"> </div>
    
 पत्नीत्रये सति द्वयोरेव विभागे कारणमाह-  
 अर्चिता तस्य कौसल्या प्रिया केकयवंशजा ।  
 अतः संभावितां ताभ्यां सुमित्रामैच्छदीश्वरः ॥ 55 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/55.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/55.md"  newLevelForH1="4"> </div>
   
 ते बहुज्ञस्य चित्तज्ञे पत्न्यौ पत्युर्महीक्षितः ।  
 चरोरर्धार्धभागाभ्यां तामयोजयतामुभे ॥ 56 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/56.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/56.md"  newLevelForH1="4"> </div>
   
 न चैवं सत्यपीर्ष्या स्यादित्याह-  
 सा हि प्रणयवत्यासीत्सपतन्योरुभयोरपि ।  
 भ्रमरी वारणस्येव मदनिस्यन्दरेखयोः ॥ 57 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/57.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/57.md"  newLevelForH1="4"> </div>
   
 ताभिर्गर्भः प्रजाभूत्यै दध्रे देवांशसंभवः ।  
 सौरीभिरिव नाडीभिरमृताख्याभिरम्मयः ॥ 58 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/58.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/58.md"  newLevelForH1="4"> </div>
   
 सममापन्नसत्त्वास्ता रेजुरापाण्डुरत्विषः ।  
 अन्तर्गतफलारम्भाः सस्यानामिव संपदः ॥ 59 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/59.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/59.md"  newLevelForH1="4"> </div>
   
 संप्रति तासां स्वप्नदर्शनान्याह-  
 गुप्तं ददृशुरात्मानं सर्वाः स्वप्नेषु वामनैः ।  
 जलजासिगदाशार्ङ्गचक्रलाञ्छितमूर्तिभिः ॥ 60 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/60.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/60.md"  newLevelForH1="4"> </div>
   
 हेमपक्षप्रभाजालं गगने च वितन्वता ।  
 उह्यन्ते स्म सुपर्णेन वेगाकृष्टपयोमुचा ॥ 61 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/61.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/61.md"  newLevelForH1="4"> </div>
   
 बिभ्रत्या कौस्तुभन्यासं स्तनान्तरविलम्बिनम् ।  
 पर्युपास्यन्त लक्ष्म्या च पद्मव्यजनहस्तया ॥ 62 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/62.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/62.md"  newLevelForH1="4"> </div>
   
 कृताभिषेकैर्दिव्यायां त्रिस्रोतसि च सप्तभिः ।  
 ब्रह्मर्षिभिः परं ब्रह्म गृणद्भिरुपतस्थिरे ॥ 63 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/63.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/63.md"  newLevelForH1="4"> </div>
   
 ताभ्यस्तथाविधान्स्वप्नाञ्छ्रुत्वा प्रीतो हि पार्थिवः ।  
 मेने परार्ध्यमात्मानं गुरुत्वेन जगद्गुरोः ॥ 64 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/64.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/64.md"  newLevelForH1="4"> </div>
   
 विभक्तात्मा विभुस्तासामेकः कुक्षिष्वनेकधा ।  
 उवास प्रतिमाचन्द्रः प्रसन्नानामपामिव ॥ 65 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/65.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/65.md"  newLevelForH1="4"> </div>
   
 अथाग्र्यमहिषीं राज्ञः प्रसूतिसमये सती ।  
 पुत्रं तमोपहं लेभे नक्तं ज्योतिरिवौषधिः ॥ 66 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/66.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/66.md"  newLevelForH1="4"> </div>
   
 राम इत्यभिरामेण वपुषा तस्य चोदितः ।  
 नामधेयं गुरुश्चक्रे जगत्प्रथममङ्गलम् ॥ 67 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/67.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/67.md"  newLevelForH1="4"> </div>
   
 रघुवंशप्रदीपेन तेनाप्रतिमतेजसा ।  
 रक्षागृहगता दीपाः प्रत्यादिष्टा इवाभवन् ॥ 68 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/68.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/68.md"  newLevelForH1="4"> </div>
   
 शय्यगतेन रामेण माता शातोदरी बभौ ।  
 सैकताम्भोजबलिना जाह्नवीव शरत्कृशा ॥ 69 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/69.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/69.md"  newLevelForH1="4"> </div>
   
 कैकेय्यास्तनयो जज्ञे भरतो नाम शीलवान् ।  
 जनयित्रीमलंचक्रे यः प्रश्रय इव श्रियम् ॥ 70 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/70.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/70.md"  newLevelForH1="4"> </div>
   
 सुतौ लक्ष्मणशत्रुघ्नौ सुमित्रा सुषुवे यमौ ।  
 सम्यगाराधिता विद्या प्रबोधविनयाविव ॥ 71 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/71.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/71.md"  newLevelForH1="4"> </div>
   
 निर्दोषमभवत्सर्वमाविष्कृतगुणं जगत् ।  
 अन्वगादिव हि स्वर्गो गां गतं पुरुषोत्तमम् ॥ 72 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/72.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/72.md"  newLevelForH1="4"> </div>
   
 तस्योदये चतुर्मूर्तेः पौलस्त्यचकितेश्वराः ।  
 विरजस्कैर्नभस्वद्भिर्दिश उच्छ्वसिता इव ॥ 73 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/73.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/73.md"  newLevelForH1="4"> </div>
   
 कृशानुरपधूमत्वात्प्रसन्नत्वात्प्रभाकरः ।  
 रक्षोविप्रकृतावास्तामपविद्धशुचाविव ॥ 74 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/74.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/74.md"  newLevelForH1="4"> </div>
   
 दशाननकिरीटेभ्यस्तत्क्षणं राक्षसश्रियः ।  
 मणिव्याजेन पर्यस्ताः पृथिव्यामश्रुबिन्दवः ॥ 75 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/75.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/75.md"  newLevelForH1="4"> </div>
   
 पुत्रजन्मप्रवेश्यानां तूर्याणां तस्य पुत्रिणः ।  
 आरम्भं प्रथमं चक्रुर्देवदुन्दुभयो दिवि ॥ 76 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/76.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/76.md"  newLevelForH1="4"> </div>
   
 संतानकमयी वृष्टिर्भवने चास्य पेतुषी ।  
 सन्मङ्घलोपचाराणां सैवादिरचनाऽभवत् ॥ 77 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/77.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/77.md"  newLevelForH1="4"> </div>
   
 कुमाराः कृतसंस्कारास्ते धात्रीस्तन्यपायिनः ।  
 आनन्देनाग्रजेनेव समं ववृधिरे पितुः ॥ 78 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/78.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/78.md"  newLevelForH1="4"> </div>
   
 स्वाभाविकं विनीतत्वं तेषां विनयकर्मणा ।  
 मुमूर्च्छ सहजं तेजो हविषेव हविर्भुजाम् ॥ 79 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/79.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/79.md"  newLevelForH1="4"> </div>
   
 परस्परविरुद्धास्ते तद्रघोरनघं कुलम् ।  
 अलमुद्द्योतयामासुर्देवारण्यमिवर्तवः ॥ 80 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/80.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/80.md"  newLevelForH1="4"> </div>
   
 समानेऽपि हि सौभ्रात्रे यथोभौ रामलक्ष्मणौ ।  
 तथा भरतशत्रुघ्नौ प्रीत्या द्वन्द्वं बभूवतुः ॥ 81 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/81.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/81.md"  newLevelForH1="4"> </div>
   
 तेषां द्वयोर्द्वयोरैक्यं बिभिदे न कदाचन ।  
 यथा वायुविभावस्वोर्यथा चन्द्रसमुद्रयोः ॥ 82 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/82.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/82.md"  newLevelForH1="4"> </div>
   
 ते प्रजानां प्रजानाथास्तेजसा प्रश्रयेण च ।  
 मनो जह्नुर्निदाघान्ते श्यामाभ्रा दिवसा इव ॥ 83 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/83.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/83.md"  newLevelForH1="4"> </div>
   
 स चतुर्धा बभौ व्यस्तः प्रसवः पृथिवीपतेः ।  
 धर्मार्थकाममोक्षाणामवतार इवाङ्गवान् ॥ 84 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/84.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/84.md"  newLevelForH1="4"> </div>
   
 गुणैराराधयामासुस्ते गुरुं गुरुवत्सलाः ।  
 तमेव चतुरन्तेशं रत्नैरिव महार्णवाः ॥ 85 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/85.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/85.md"  newLevelForH1="4"> </div>
   
 सुरगज इव दन्तैर्भग्नदैत्यासिधारै-  
      र्नय इव पणबन्धव्यक्तयोगैरुपायैः ।  
 हरिरिव युगदीर्घैर्दोर्भिरंशैस्तदीयैः  
      पतिरवनिपतीनां तैश्चकाशे चतुर्भिः ॥ 86 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/86.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/10/86.md"  newLevelForH1="4"> </div>
   
 इति श्रीमहोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां संजीविनीसमाख्यायां दशमः सर्गः ।  
 
