--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12.md
@@ -9,421 +9,421 @@ title = "१२"
 तेजोनिर्जितमार्तण्डमण्डलौ लोकनन्दनौ ॥  
 निर्विष्टविषयस्नेहः स दशान्तमुपेयिवान् ।  
 आसीदासन्ननिर्वाणः प्रदीपार्चिरिवोषसि ॥ 1 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/01.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/01.md"  newLevelForH1="4"> </div>
   
 तं कर्ममूलमागत्य रामे श्रीर्न्यस्यतामिति ।  
 कैकेयीशङ्कयेवाह पलितच्छद्मना जरा ॥ 2 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/02.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/02.md"  newLevelForH1="4"> </div>
   
 सा पौरान्पौरकान्तस्य रामस्याभ्युदयश्रुतिः ।  
 प्रत्येकं ह्लादयांचक्रे कुल्येवोद्यानपादपान् ॥ 3 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/03.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/03.md"  newLevelForH1="4"> </div>
   
 तस्याभिषेकसंभारं कल्पितं क्रूरनिश्चया ।  
 दूषयामास कैकेयी शोकोष्णैः पार्थिवाश्रुभिः ॥ 4 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/04.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/04.md"  newLevelForH1="4"> </div>
   
 सा किलाश्वासिता चण्डी भर्त्रा तत्संश्रुतौ वरौ ।  
 उद्ववामेन्द्रसिक्ता भूर्बिलमग्नाविवोरगौ ॥ 5 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/05.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/05.md"  newLevelForH1="4"> </div>
   
 तयोश्चतुर्दशैकेन रामं प्राव्राजयत्समाः ।  
 द्वितीयेन सुतस्यैच्छद्वैधव्यैकफलां श्रियम् ॥ 6 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/06.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/06.md"  newLevelForH1="4"> </div>
   
 पित्रा दत्तां रुदन्रामः प्राङ्महीं प्रत्यपद्यत ।  
 पश्चाद्वनाय गच्छेति तदाज्ञां मुदितोऽग्रहीत् ॥ 7 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/07.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/07.md"  newLevelForH1="4"> </div>
   
 दधतो मङ्गलक्षौमे वसानस्य च वल्कले ।  
 ददृशुर्विस्मितास्तस्य मुखरागं समं जनाः ॥ 8 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/08.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/08.md"  newLevelForH1="4"> </div>
   
 स सीतालक्ष्मणसखेः सत्याद्गुरुमलोपयन् ।  
 विवेश दण्डकारण्यं प्रत्येकं च सतां मनः ॥ 9 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/09.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/09.md"  newLevelForH1="4"> </div>
   
 राजापि तद्वियोगार्तः स्मृत्वा शापं स्वकर्मजम् ।  
 शरीरत्यागमात्रेण शुद्धिलाभममन्यत ॥ 10 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/100.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/100.md"  newLevelForH1="4"> </div>
   
 विप्रोषितकुमारं तद्राज्यमस्तमितेश्वरम् ।  
 रन्ध्रान्वेषणदक्षाणां द्विषामामिषततां ययौ ॥ 11 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/11.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/11.md"  newLevelForH1="4"> </div>
   
 अथानाथाः प्रकृतयो मातृबन्धुनिवासिनम् ।  
 मौलैरानाययामासुर्भरतं स्तम्भिताश्रुभिः ॥ 12 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/12.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/12.md"  newLevelForH1="4"> </div>
   
 श्रुत्वा तथाविधं मृत्युं कैकेयीतनयः पितुः ।  
 मातुर्न केवलं स्वस्याः श्रियोऽप्यासीत्पराङ्मुखः ॥ 13 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/13.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/13.md"  newLevelForH1="4"> </div>
   
 ससैन्यश्चान्वगाद्रामं दर्शतानाश्रमालयैः ।  
 तस्य पश्यन्ससौमित्रेरुदश्रुर्वसतिद्रुमान् ॥ 14 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/14.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/14.md"  newLevelForH1="4"> </div>
   
 चित्रकूटवनस्थं च कथितस्वर्गतिर्गुरोः ।  
 लक्ष्म्या निमन्त्रयांचक्रे तमनुच्छिष्टसंपदा ॥ 15 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/15.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/15.md"  newLevelForH1="4"> </div>
   
 स हि प्रथमजे तस्मिन्नकृतश्रीपरिग्रहे ।  
 परिवेत्तारमात्मानं मेने स्वीकरणाद्भुवः ॥ 16 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/16.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/16.md"  newLevelForH1="4"> </div>
   
 तमशक्यमपाक्रष्टुं निदेशात्स्वर्गिणः पितुः ।  
 ययाचे पादुके पश्चात्कर्तुं राज्याधिदेवते ॥ 17 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/17.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/17.md"  newLevelForH1="4"> </div>
   
 स विसृष्टस्तथेत्युक्त्वा भ्रात्रा नैवाविशत्पुरीम् ।  
 नन्दिग्रामगतस्तस्य राज्‌यं न्यासमिवाभुनक् ॥ 18 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/18.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/18.md"  newLevelForH1="4"> </div>
   
 दृढभक्तिरिति ज्येष्ठे राज्यतृष्णापराङ्मुखः ।  
 मातुः पापस्य भरतः प्रायश्चित्तमिवाकरोत् ॥ 19 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/19.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/19.md"  newLevelForH1="4"> </div>
   
 रामोऽपि सह वैदेह्या वने वन्येन वर्तयन् ।  
 चचार सानुजः शान्तो वृद्धेक्ष्वाकुव्रतं युवा ॥ 20 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/20.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/20.md"  newLevelForH1="4"> </div>
   
 प्रभावस्तम्भितच्छायमाश्रितः स वनस्पतिम् ।  
 कदाचिदङ्के सीतायाः शिशअये किंचिदिव श्रमात् ॥ 21 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/21.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/21.md"  newLevelForH1="4"> </div>
   
 ऐन्द्रिः किल नखैस्तस्या विददार स्तनौ द्विजः ।  
 प्रियोपभोगचिह्नेषु पौरोभाग्यमिवाचरन् ॥ 22 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/22.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/22.md"  newLevelForH1="4"> </div>
   
 तस्मिन्नास्थदिषीकास्त्रं रामो रामावबोधितः ।  
 आत्मानं मुमुचे तस्मादिकेनेत्रव्ययेन सः ॥ 23 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/23.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/23.md"  newLevelForH1="4"> </div>
   
 रामस्त्वासन्नदेशत्वाद्भरतागमनं पुनः ।  
 आशङ्क्योत्सुकसारङ्गां चित्रकूटस्थलीं जहौ ॥ 24 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/24.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/24.md"  newLevelForH1="4"> </div>
   
 प्रययावातिथेयेषु वसन्नृषिकुलेषु सः ।  
 दक्षिणां दिशमृक्षेषु वार्षिकेष्विव भास्करः ॥ 25 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/25.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/25.md"  newLevelForH1="4"> </div>
   
 बभौ तमनुगच्छन्ती विदेहाधिपतेः सुता ।  
 प्रतिषिद्धापि कैकेय्या लक्ष्मीरिव गुणोन्मुखी ॥ 26 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/26.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/26.md"  newLevelForH1="4"> </div>
   
 अनसूयातिसृष्टेन पुण्यगन्धेन काननम् ।  
 सा चकाराङ्गरागेण पुष्पोञ्चलितषट्पदम् ॥ 27 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/27.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/27.md"  newLevelForH1="4"> </div>
   
 संध्याभ्रकपिशस्तस्य विरोधो नाम राक्षसः ।  
 अतिष्ठन्मार्गमावृत्य रामस्येन्दोरिव ग्रहः ॥ 28 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/28.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/28.md"  newLevelForH1="4"> </div>
   
 स जहार तयोर्मध्ये मैथिलीं लोकशोषणः ।  
 नभोनभस्ययोर्वृष्टिमवग्रह इवान्तरे ॥ 29 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/29.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/29.md"  newLevelForH1="4"> </div>
   
 तं विनिष्पिष्य काकुत्स्थौ पुरा दूषयति स्थलीम् ।  
 गन्धेनाशुचिना चेति वसुधायां निचटख्नतुः ॥ 30 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/30.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/30.md"  newLevelForH1="4"> </div>
   
 पञ्चवट्यां ततो रामः शासनात्कुम्भजन्मनः ।  
 अनपोढस्थितिस्तस्थौ विन्ध्याद्रिः प्रकृताविव ॥ 31 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/31.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/31.md"  newLevelForH1="4"> </div>
   
 रावणावरजा तत्र राघवं मदनातुरा ।  
 अभिपेदे निदाघार्ता व्यालीव मलयद्रुमम् ॥ 32 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/32.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/32.md"  newLevelForH1="4"> </div>
   
 सा सीतासंनिधावेव तं वव्रे कथितान्वया ।  
 अत्यारूढो हि नारीणामकालज्ञो मनोभवः ॥ 33 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/33.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/33.md"  newLevelForH1="4"> </div>
   
 कलत्रवानहं बाल!कनीयांसं भजस्व मे ।  
 इति रामो वृषस्यन्तीं वृषस्कन्धः शशास ताम् ॥ 34 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/34.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/34.md"  newLevelForH1="4"> </div>
   
 ज्येष्ठाभिगमनात्पूर्वं तेनाप्यनभिनन्दिताम् ।  
 साऽभूद्रामाश्रया भूयो नदीवोभयकूलभाक् ॥ 35 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/35.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/35.md"  newLevelForH1="4"> </div>
   
 संरम्भं मैथिलीहासः क्षणसौम्यां निनाय ताम् ।  
 निवातस्मिमितां वेलां चद्रोदय इवोदधेः ॥ 36 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/36.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/36.md"  newLevelForH1="4"> </div>
   
 फलमस्योपहासस्य सद्यः प्राप्स्यसि पश्य माम् ।  
 मृग्याः परिभवो व्याघ्र्यामित्यवेहि त्वया कृतम् ॥ 37 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/37.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/37.md"  newLevelForH1="4"> </div>
   
 इत्युक्त्वा मैथिलीं भर्तुरङ्केः निविशतीं भयात् ।  
 रूपं शूर्पणखा नाम्नः सदृशं प्रत्यपद्यत ॥ 38 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/38.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/38.md"  newLevelForH1="4"> </div>
   
 लक्ष्मणः प्रथमं श्रुत्वा कोकिलामञ्जुवादिनीम् ।  
 शइवाघोरस्वनां पश्चाद्बुबुधे विकृतेति ताम् ॥ 39 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/39.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/39.md"  newLevelForH1="4"> </div>
   
 पर्णशालामथ क्षिप्रं विकृष्टासिः प्रविश्य सः ।  
 वैरूप्यपौनरुक्त्येन भीषाणां तामयोजयत् ॥ 40 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/40.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/40.md"  newLevelForH1="4"> </div>
   
 सा वक्रनखधारिण्या वेणुकर्कशपर्वया ।  
 अङ्कुशाकारयाङ्गुल्या तावतर्जयदम्बरे ॥ 41 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/41.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/41.md"  newLevelForH1="4"> </div>
   
 प्राप्य चाशु जनस्थानं खरादिभ्यस्तथाविधम् ।  
 रामोपक्रममाचख्यौ रक्षःपरिभवं नवम् ॥ 42 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/42.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/42.md"  newLevelForH1="4"> </div>
   
 मुखावयवलूनां तां नैर्ऋता यत्पुरो दधुः ।  
 रामाभियायिनां तेषां तदेवाभूदमङ्गलम् ॥ 43 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/43.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/43.md"  newLevelForH1="4"> </div>
   
 उदायुधानापततस्तान्दृप्तान्प्रेक्ष्य राघवः ।  
 निदधे विजयाशंसां चापे सीतां च लक्ष्मणे ॥ 44 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/44.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/44.md"  newLevelForH1="4"> </div>
   
 एको दाशरथिः कामं यातुधानाः सहस्रशः ।  
 ते तु यावन्त एवाजौ तावांश्च ददृशे स तैः ॥ 45 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/45.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/45.md"  newLevelForH1="4"> </div>
   
 असज्जनेन काकुत्स्थः प्रयुक्तमथ दूषणम् ।  
 न चक्षमे शुभाचारः स दूषणमिवात्मनः ॥ 46 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/46.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/46.md"  newLevelForH1="4"> </div>
   
 तं शरैः प्रतिजग्राह खरत्रिशिरसौ च सः ।  
 क्रमशस्ते पुनस्तस्य चापात्सममिवोद्ययुः ॥ 47 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/47.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/47.md"  newLevelForH1="4"> </div>
   
 तैस्त्रयाणां शितैर्बाणैर्यथापूर्वविशुद्धिभिः ।  
 आयुर्देहातिगैः पीतं रुधइरं तु पतत्रिभिः ॥ 48 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/48.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/48.md"  newLevelForH1="4"> </div>
   
 तस्मिन्रामशरोत्कृत्ते बले महति रक्षसाम् ।  
 उत्थइतं ददृशेऽन्यञ्च कबन्धेभ्यो न किंचन ॥ 49 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/49.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/49.md"  newLevelForH1="4"> </div>
   
 सा बाणवर्षिणं रामं योधयित्वा सुरद्विषाम् ।  
 अप्रबोधाय सुष्वाप गृध्रच्छाये वरूथिनी ॥ 50 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/50.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/50.md"  newLevelForH1="4"> </div>
   
 राघवास्त्रविदीर्णानां रावणं प्रति रक्षसाम् ।  
 तेषां शूर्पणखैवैका दुष्प्रवृत्तिहराऽभवत् ॥ 51 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/51.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/51.md"  newLevelForH1="4"> </div>
   
 निग्रहात्स्वसुराप्तानां वधाञ्च धनदानुजः ।  
 रामेण निहितं मेने पदं दशसु मूर्धसु ॥ 52 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/52.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/52.md"  newLevelForH1="4"> </div>
   
 रक्षसा मृगरूपेण वञ्चयित्वा स रागवौ ।  
 जहार सीतां पक्षीन्द्रप्रयासक्षणविघ्नितः ॥ 53 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/53.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/53.md"  newLevelForH1="4"> </div>
   
 तौ सीतान्वेषिणौ गृध्रं लूनपक्षमपश्यताम् ।  
 प्राणैर्दशरथप्रीतेरनृणं कण्ठवर्तिभिः ॥ 54 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/54.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/54.md"  newLevelForH1="4"> </div>
   
 स रावणहृतां ताभअयां वचसाचष्ट मैथिलीम् ।  
 आत्मनः सुमहत्कर्म व्रणैरावेद्य संस्थितः ॥ 55 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/55.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/55.md"  newLevelForH1="4"> </div>
   
 तयोस्तस्मिन्नवीभूतपितृव्यापत्तिशोकयोः ।  
 पितरीवाग्निसंस्कारात्परा ववृतिरे क्रियाः ॥ 56 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/56.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/56.md"  newLevelForH1="4"> </div>
   
 वधनिर्धूतशापस्य कबन्धस्योपदेशतः ।  
 मुमूर्च्छ सख्यं रामस्य समानव्यसने हरौ ॥ 57 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/57.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/57.md"  newLevelForH1="4"> </div>
   
 स हत्वा वालिनं वीरः स रामो वालिनं सुग्रीवाग्रजं हत्वा चिरकाङ्क्षिते तत्पदे वालिस्थाने। धातोः स्थान आदेशमिव। आदेशभूतं धात्वन्तरमिवेत्यर्थः। सुग्रीवं संन्यवेशयत्स्थापितवान्। यथा 'अस्तेर्भूः'इत्यस्तिधातोः स्थान आदेशो भूधातुरस्तिकार्यमशेषं समभिधत्ते तद्विदिति भावः। आदेशो नाम शब्दान्तरस्य स्थाने विधीयमानं शब्दान्तरमभिधीयते ॥ 58 ॥  
 इतस्ततश्च वैदेहीमन्वेष्टुं भर्तृचोदिताः ।  
 कपयश्चेरुरार्तस्य रामस्येव मनोरथाः ॥ 59 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/59.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/59.md"  newLevelForH1="4"> </div>
   
 प्रवृत्तावुपलब्धायां तस्याः संपातिदर्शनात् ।  
 मारुतिः सागरं तीर्णः संसारमिव निर्ममः ॥ 60 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/60.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/60.md"  newLevelForH1="4"> </div>
   
 दृष्टा विचिन्वता तेन लङ्कायां राक्षसीवृता ।  
 जानकी विषवल्लीभिः परीतेव महौषधिः ॥ 61 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/61.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/61.md"  newLevelForH1="4"> </div>
   
 तस्यै भर्तुरभिज्ञानमङ्गुलीयं दददौ कपिः ॥  
 प्रत्युद्गतमिवानुष्णैस्तदानन्दाश्रुबिन्दुभिः ॥ 62 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/62.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/62.md"  newLevelForH1="4"> </div>
   
 निर्वाप्य प्रियसंदेशैः सीतामक्षवधोद्धतः ।  
 स ददाह पुरीं लङ्कां क्षणसोढारिनिग्रहः ॥ 63 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/63.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/63.md"  newLevelForH1="4"> </div>
   
 प्रत्यभिज्ञानरत्नं च रामायादर्शयत्कृती ।  
 हृदयं स्वयमायातं वैदेह्या इव मूर्तिमत् ॥ 64 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/64.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/64.md"  newLevelForH1="4"> </div>
   
 स प्राप हृदयन्यस्तमणिस्पर्शनिमीलितः ।  
 अपयोधरसंसर्गां प्रियालिङ्गननिर्वृतिम् ॥ 65 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/65.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/65.md"  newLevelForH1="4"> </div>
   
 श्रुत्वा रामः प्रियोदन्तं मेने तत्संगमोत्सुकः ।  
 महार्णवपरिक्षेपं लङ्कायाः परिखालघुम् ॥ 66 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/66.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/66.md"  newLevelForH1="4"> </div>
   
 स प्रतस्थेऽरिनाशाय हरिसैन्यैरनुद्रूतः ।  
 न केवलं भुवः पृष्ठे व्योम्नि संबाधवार्तिभिः ॥ 67 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/67.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/67.md"  newLevelForH1="4"> </div>
   
 निविष्टमुदधेः कूले तं प्रपेदे विभीषणः ।  
 स्नेहाद्राक्षसलक्ष्म्येव बुद्धिमाविश्य चोदितः ॥ 68 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/68.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/68.md"  newLevelForH1="4"> </div>
   
 तस्मै निशाचरैश्वर्यं प्रतिशुश्राव राघवः ।  
 काले खलु समारब्धाः फलं बध्नन्ति नीतयः ॥ 69 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/69.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/69.md"  newLevelForH1="4"> </div>
   
 स सेतुं बन्धयामास प्लवगैर्लवणाम्भसि ।  
 रसातलादिवोन्मग्नं शेषं स्वप्नाय शार्ङ्गिणः ॥ 70 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/70.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/70.md"  newLevelForH1="4"> </div>
   
 तेनोत्तीर्य पथा लङ्कां रोधयामास पिङ्गलैः ।  
 द्वितीयं हेमप्राकारं कुर्वद्भिरिव वानरैः ॥ 71 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/71.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/71.md"  newLevelForH1="4"> </div>
   
 रणः प्रववृते तत्र भीमः प्लवगरक्षसाम् ।  
 दिग्विजृम्भितकाकुत्स्थपौलस्त्यजयघोषणः ॥ 72 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/72.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/72.md"  newLevelForH1="4"> </div>
   
 पादपाविद्धपरिघः शिलानिष्पिष्टमुद्गरः ।  
 अतिशस्त्रनखन्यासः शैलरुग्णमतंगजः ॥ 73 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/73.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/73.md"  newLevelForH1="4"> </div>
   
 अथ रामशिरश्छेददर्शनोद्भ्रान्तचेतनाम् ।  
 सीतां मायेति शंसन्ती त्रिजटा समजीवयत् ॥ 74 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/74.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/74.md"  newLevelForH1="4"> </div>
   
 कामं जीवति मे नाथ इति सा विजहौ शुचम् ।  
 प्राङ्मत्वा सत्यमस्यान्तं जीविता स्मीति लज्जिता ॥ 75 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/75.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/75.md"  newLevelForH1="4"> </div>
   
 गरुडापातविश्लिष्टमेघनादास्त्रबन्धनः ।  
 दाशरथ्योः क्षणक्लेशः स्वप्नवृत्त इवाभवत् ॥ 76 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/76.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/76.md"  newLevelForH1="4"> </div>
   
 ततो बिभेद पौलस्त्यः शक्त्या वक्षसि लक्ष्मणम् ।  
 रामस्त्वनाहतोऽप्यासीद्विदीर्णहृदयः शुचा ॥ 77 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/77.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/77.md"  newLevelForH1="4"> </div>
   
 स मारुतिसमानीतमहौषधिहतव्यथः ।  
 लङ्कास्त्रीणां पुनश्चक्रे विलापाचार्यकं शरैः ॥ 78 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/78.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/78.md"  newLevelForH1="4"> </div>
   
 स नादं मेघनादस्य धनुश्चेन्द्रायुधप्रभम् ।  
 मेघस्येव शरत्कालो न किंचित्पर्यशेषयत् ॥ 79 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/79.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/79.md"  newLevelForH1="4"> </div>
   
 कुम्भकर्णः कपीन्द्रेण तुल्यावस्थः स्वसुः कृतः ।  
 रुरोध रामं शृङ्गीव टङ्कच्छिन्नमनः शिलः ॥ 80 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/80.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/80.md"  newLevelForH1="4"> </div>
   
 अकाले बोधितो भ्रात्रा प्रियस्वप्नो वृथा भवान् ।  
 रामेषुभिरितीवासौ दीर्घनिद्रां प्रवेशितः ॥ 81 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/81.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/81.md"  newLevelForH1="4"> </div>
   
 इतरण्यपि रक्षांसि पेतुर्वानरकोटिषु ।  
 रजांसि समरोत्थानि तच्छोणितनदीष्विव ॥ 82 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/82.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/82.md"  newLevelForH1="4"> </div>
   
 निर्ययावथ पौलस्त्यः पुनर्युद्धाय मन्दिरात् ।  
 अरावणमरामं वा जगदद्येति निश्चितः ॥ 83 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/83.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/83.md"  newLevelForH1="4"> </div>
   
 रामं पदातिमालोक्य लङ्केशं च वरूथिनम् ।  
 हरियुग्यं रथं तस्मै प्रजिघाय पुरंदरः ॥ 84 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/84.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/84.md"  newLevelForH1="4"> </div>
   
 तमाधूतध्वजपटं व्योमगङ्गोर्मिवायुभिः ।  
 देवसूतभुजालम्बी जैत्रमध्यास्त राघवः ॥ 85 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/85.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/85.md"  newLevelForH1="4"> </div>
   
 मातलिस्तस्य माहेन्द्रमामुमोच तनुच्छदम् ।  
 यत्रोत्पलदलक्लैब्यमस्त्राण्यापुः सुरद्विषाम् ॥ 86 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/86.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/86.md"  newLevelForH1="4"> </div>
   
 अन्योन्यदर्शनप्राप्तविक्रमावसरं चिरात् ।  
 रामरावणयोर्युद्धं चरितार्थमिवाभवत् ॥ 87 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/87.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/87.md"  newLevelForH1="4"> </div>
   
 भुजमूर्घोरुबाहुल्यादेकोऽपि धनदानुजः ।  
 ददृशे ह्ययथापूर्वो मातृवंश इव स्थितः ॥ 88 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/88.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/88.md"  newLevelForH1="4"> </div>
   
 जेतारं लोकपालानां स्वमुखैरर्चितेश्वरम् ।  
 रामस्तुलितकैलासमरातिं बह्वमन्यत ॥ 89 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/89.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/89.md"  newLevelForH1="4"> </div>
   
 तस्य स्फुरति पौलस्त्यः सीतासंगमशंसिनि ।  
 निचखानाधिकक्रोधः शरं सव्येतरे भुजे ॥ 90 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/90.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/90.md"  newLevelForH1="4"> </div>
   
 रावणस्यापि रामास्तो भित्त्वा हृदयमाशुगः ।  
 विवेश भुवमाख्यातुमुरगेभ्य इव प्रियम् ॥ 91 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/91.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/91.md"  newLevelForH1="4"> </div>
   
 वचसैव तयोर्वाक्यमस्त्रमस्त्रेण निघ्नतोः ।  
 अन्योन्यजयसंरम्भो ववृधे वादिनोरिव ॥ 92 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/92.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/92.md"  newLevelForH1="4"> </div>
   
 विक्रमव्यतिहारेण सामान्याऽभूद्द्वयोरपि ।  
 जयश्रीरन्तरा वेदिर्मत्तवारणयोरिव ॥ 93 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/93.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/93.md"  newLevelForH1="4"> </div>
   
 कृतप्रतिकृतप्रीतैस्तयोर्मुक्तां सुरासुरैः ।  
 परस्परशरव्राताः पुष्पवृष्टिं न सेहिरे ॥ 94 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/94.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/94.md"  newLevelForH1="4"> </div>
   
 अयःशङ्कुचितां रक्षः शतघ्नीमथ शत्रवे ।  
 हृतां वैवस्वतस्येव कृटाशाल्मलिमक्षिपत् ॥ 95 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/95.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/95.md"  newLevelForH1="4"> </div>
   
 राघवो रथमप्राप्तं तामाशां च सुरद्विषाम् ।  
 अर्धचन्द्रमुखैर्बाणैश्चिच्छेद कदलीसुखम् ॥ 96 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/96.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/96.md"  newLevelForH1="4"> </div>
   
 अमोघं संदधे चास्मै धनुष्येकधनुर्धरः ।  
 ब्राह्ममस्त्रं प्रियाशोकशल्यनिष्कर्षणौषधम् ॥ 97 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/97.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/97.md"  newLevelForH1="4"> </div>
   
 तद्व्योम्नि शतधा भिन्नं ददृशे दीप्तिमन्मुखम् ।  
 वपुर्महोरगस्येव करालफणमण्डलम् ॥ 98 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/98.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/98.md"  newLevelForH1="4"> </div>
   
 तेन मन्त्रप्रयुक्तेन निमेषार्धादपातयत् ।  
 स रावणशिरःपङ्क्तिमज्ञातव्रणवेदनाम् ॥ 99 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/99.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/99.md"  newLevelForH1="4"> </div>
   
 बालार्कप्रतिमेवाप्सु वीचिभिन्ना पतिष्यतः ।  
 रराज रक्षः कायस्य कण्ठच्छेदपरम्परा ॥ 100 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/100.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/100.md"  newLevelForH1="4"> </div>
   
 मरुतां पश्यतां तस्य शिरांसि पतितान्यपि ।  
 मनो नातिविशश्वास पुनःसंधानशङ्क्तिनाम् ॥ 101 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/101.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/101.md"  newLevelForH1="4"> </div>
   
 अथ मदगुरुपक्षैर्लोकपालद्विपाना-  
 मनुगतमलिवृन्दैर्गण्डभित्तीर्विहाय ।  
 उपनतमणिबन्धे मूर्ध्नि पौलस्त्यशत्रोः  
 सुरभि सुरविमुक्तं पुष्पवर्षं पपात ॥ 102 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/102.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/102.md"  newLevelForH1="4"> </div>
   
 यन्ता हरेः सपदि संहृतकार्मुकज्य-  
 मापृच्छ्य राघवमनुष्ठितदेवकार्यम् ।  
 नामाङ्करावणशराङ्कितकेतुयष्टि-  
 मूर्ध्वं रथं हरिसहस्रयुजं निनाय ॥ 103 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/103.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/103.md"  newLevelForH1="4"> </div>
   
 रघुपतिरपि जातवेदोविशुद्धां प्रगृह्य प्रियां  
 प्रियसुहृदि विभीषणे संगमय्य श्रियं वैरिणः ।  
 रविसुतसहितेन तेनानुयातः ससौमित्रिणा  
 भुजविजितविमानरत्नाधिरूढः प्रतस्थे पुरीम् ॥ 104 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/104.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/12/104.md"  newLevelForH1="4"> </div>
   
 इति महामहोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां रघुवंशव्याख्यायां संजीविनीसमाख्यायां द्वादशः सर्गः ॥  
