--- a/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13.md
+++ b/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13.md
@@ -9,215 +9,215 @@ title = "१३"
 पुण्यप्रणामं भुवनाभिरामं रामं विरामं विपदामुपासे ॥  
 अथात्मनः शब्दगुणं गुणज्ञः पदं विमानेन विगाहमानः ।  
 रत्नाकरं वीक्ष्य मिथः स जायां रामाभिधानो हरिरित्युवाच ॥ 1 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/01.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/01.md"  newLevelForH1="4"> </div>
   
 वैदेहि! पश्याऽऽमलयाद्विभक्तं मत्सेतुना फेनिलमम्बुराशिम् ।  
 छायापथेनेव शरत्प्रसन्नमाकाशमाविष्कृतचारुतारम् ॥ 2 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/02.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/02.md"  newLevelForH1="4"> </div>
   
 गुरोर्यियक्षोः कपिलेन मेध्ये रसातलं संक्रमिते तुरंगे ।  
 तदर्थमुर्वीमवदारयद्भिः पूर्वैः किलायं परिवर्धितो नः ॥ 3 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/03.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/03.md"  newLevelForH1="4"> </div>
   
 गर्भं दधत्यर्कमरीचयोऽस्माद्विवृद्धिमत्राश्नुवते वसूनि ।  
 अबिन्धनं वह्निमसौ बिभर्ति प्रह्लादनं ज्योतिरजन्यनेन ॥ 4 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/04.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/04.md"  newLevelForH1="4"> </div>
   
 तां तामवस्थां प्रतिपद्यमानं स्थितं दश व्याप्य दिशो महिम्ना ।  
 विष्णोरिवास्यानवधारणीयमीदृक्तया रूपमियत्तया वा ॥ 5 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/05.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/05.md"  newLevelForH1="4"> </div>
   
 नाभिप्ररूढाम्बुरुहासनेन संस्तूयमानः प्रथमेन धात्रा ।  
 अमुं युगान्तोचितयोगनिद्रः संहृत्य लोकान्पुरुषोऽधिशेते ॥ 6 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/06.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/06.md"  newLevelForH1="4"> </div>
   
 पक्षच्छिदा गोत्रभिदात्तगन्धाः शरण्यमेनं शतशो महीध्राः ।  
 नृपा इवोपप्लविनः परेभ्यो धर्मोत्तरं मध्यममाश्रयन्ते ॥ 7 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/07.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/07.md"  newLevelForH1="4"> </div>
   
 रसातलादादिभवेन पुंसा भुवः प्रयुक्तोद्वहनक्रियायाः ।  
 अस्याच्छमम्मः प्रलयप्रवृद्धं मुहूर्तवक्राभरणं बभूव ॥ 8 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/08.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/08.md"  newLevelForH1="4"> </div>
   
 मुखार्पणेषु प्रकृतिप्रगल्भाः स्वयं तरंगाधरदानदक्षः ।  
 अनन्यसामान्यकलत्रवृत्तिः पिबत्यसौ पाययते च सिन्धूः ॥ 9 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/09.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/09.md"  newLevelForH1="4"> </div>
   
 ससत्त्वमादाय नदीमुखाम्भः संमीलयन्तो विवृताननत्वात् ।  
 अमी शिरोभिस्तिमयः सरन्ध्रैरूर्ध्वं वितन्वन्ति जलप्रवाहान् ॥ 10 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/10.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/10.md"  newLevelForH1="4"> </div>
   
 मातंगनक्रैः सहसोत्पतद्भिन्नान्द्विधा पश्य समुद्रफेनान् ।  
 कपोलसंसर्पितया य एषां व्रजन्ति कर्णक्षणचामरत्वम् ॥ 11 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/11.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/11.md"  newLevelForH1="4"> </div>
   
 वेलानिलाय प्रसृता भुजंगा वहोर्मिविस्फूर्जथुनिर्विशेषाः ।  
 सूर्यांशुसंपर्कसमृद्धरागैर्व्यज्यन्त एते मणिभिः फणस्थैः ॥ 12 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/12.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/12.md"  newLevelForH1="4"> </div>
   
 तवाधरस्पर्धिषु विद्रुमेषु पर्यस्तमेतत्सहसोर्मिवेगात् ।  
 ऊर्ध्वाङ्कुरप्रोतमुखं कथंचित्क्लेशादपक्रामति शङ्खयूथम् ॥ 13 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/13.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/13.md"  newLevelForH1="4"> </div>
   
 प्रवृत्तमात्रेण पयांसि पातुमावर्तवेगाद्भ्रमता घनेन ।  
 आभाति भूयिष्ठमयं समुद्रः प्रमध्यमानो गिरिणेव भूयः ॥ 14 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/14.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/14.md"  newLevelForH1="4"> </div>
   
 दूरादयश्चक्रनिभस्य तन्वी तमालतालीवनराजिनीला ।  
 आभाति वेला लवणाम्बुराशेर्धारानिबद्धेव कलङ्करेखा ॥ 15 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/15.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/15.md"  newLevelForH1="4"> </div>
   
 वेलानिलः केतकरेणुभिस्ते संभावयत्याननमायताक्षि! ।  
 मामक्षमं मण्डनकालहानेर्वेत्तीव बिम्बाधरबद्धतृष्णम् ॥ 16 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/16.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/16.md"  newLevelForH1="4"> </div>
   
 एते वयं सैकतभिन्नशुक्तिपर्यस्तमुक्तापटलं पयोधेः ।  
 प्राप्ता मुहूर्तेन विमानवेगात्कूलं फलावर्जितपूगमालम् ॥ 17 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/17.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/17.md"  newLevelForH1="4"> </div>
   
 कुरुष्व तावत्करभोरु! पश्चान्मार्गे मृगप्रेक्षिणि! दृष्टिपातम् ।  
 एषा विदूरीभवतः समुद्रात्सकानना निष्पततीव भूमिः ॥ 18 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/18.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/18.md"  newLevelForH1="4"> </div>
   
 क्वचित्पथा संचरते सुराणां क्वचिद्धनानां पततां क्वचिञ्च ।  
 यथाविधो मे मनसोऽभिलाषः प्रवर्तते पश्य तथा विमानम् ॥ 19 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/19.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/19.md"  newLevelForH1="4"> </div>
   
 असौ महेन्द्रद्विपदानगन्धिस्त्रिमार्गगावीचिविमर्दशीतः ।  
 आकाशवायुर्दिनयौवनोत्थानाचामति स्वेदलवान्मुखे ते ॥ 20 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/20.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/20.md"  newLevelForH1="4"> </div>
   
 करेण वातायनलम्बितेन स्पृष्टस्त्वया चण्डि! कुतूहलिन्या ।  
 आमुञअचतीवाभरणं द्वितीयमुद्भिन्नविद्युद्वलयो घनस्ते ॥ 21 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/21.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/21.md"  newLevelForH1="4"> </div>
   
 अमी जनस्थानमपोढविघ्नं मत्वा समारब्धनवोटजानि ।  
 अध्यासते चीरभृतो यथास्वं चिरोज्झितान्याश्रममण्डलानि ॥ 22 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/22.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/22.md"  newLevelForH1="4"> </div>
   
 सैषा स्थली यत्र विचिन्वता त्वां भ्रष्टां मया नूपुरमेकमुर्व्याम् ।  
 अदृश्यत त्वञ्चरणारविन्दविश्लेषदुःखादिव बद्धमौनम् ॥ 23 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/23.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/23.md"  newLevelForH1="4"> </div>
   
 त्वं रक्षसा भीरु! यतोऽपनीता तं मार्गमेताः कृपया लता मे ।  
 अदर्शयन्वक्तुमशक्नुवत्यः शाखाभिरावर्जितपल्लवाभिः ॥ 24 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/24.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/24.md"  newLevelForH1="4"> </div>
   
 मृग्यश्च दर्भाङ्कुरनिर्व्यपेक्षास्तवागतिज्ञं समबोधयन्माम् ।  
 व्यापारयन्त्यो दिशि दक्षिणस्यामुत्पक्ष्मराजीनि विलोचनानि ॥ 25 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/25.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/25.md"  newLevelForH1="4"> </div>
   
 एतद्गिरेर्माल्यवतः पुरस्तादाविर्भवत्यम्बरलेखि श्रृङ्गम् ।  
 नवं पयो यत्र घनैर्मया च त्वद्विप्रयोगाश्रु समं विसृष्टम् ॥ 26 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/26.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/26.md"  newLevelForH1="4"> </div>
   
 गन्धश्च धाराहतपल्वलानां कादम्बमर्धोद्गतकेसरं च ।  
 स्निग्धाशअच केकाः शिखिनां बभूवुर्यस्मिन्नसह्यानि विनात्वया मे ॥ 27 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/27.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/27.md"  newLevelForH1="4"> </div>
   
 पूर्वानुभूतं स्मरता च यत्र कम्पोत्तरं भीरु! तवोपगूढम् ।  
 गुहाविसारीण्यतिवाहितानि मया कथंचिद्धनगर्जितानि ॥ 28 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/28.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/28.md"  newLevelForH1="4"> </div>
   
 आसारसिक्तक्षितिबाष्पयोगान्मामक्षिणोद्यत्र विभिन्नकोशैः ।  
 विडम्ब्यमाना नवकन्दलैस्ते विवाहधूमारुणलोचनश्रीः ॥ 29 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/29.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/29.md"  newLevelForH1="4"> </div>
   
 उपान्तवानीरवनोपगूढान्यालक्ष्यपारिप्लवसारसानि ।  
 दूरावतीर्णा पिबतीव खेदादमूनि पम्पासलिलानि दृष्टिः ॥ 30 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/30.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/30.md"  newLevelForH1="4"> </div>
   
 अत्रावियुक्तानि रथाङ्गनाम्नामन्योन्यदत्तोत्पलकेसराणि ।  
 द्वन्द्वानि दूरान्तरवर्तिना ते मया प्रिये! सस्पृहमीक्षितानि ॥ 31 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/31.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/31.md"  newLevelForH1="4"> </div>
   
 इमां तटाशोकलतां च त्वीं स्तनाभिरामस्तबकाभिनम्राम् ।  
 त्वत्प्राप्तिबुद्ध्या परिरब्धुकामः सौमित्रिणा साश्रुरहं निषिद्धः ॥ 32 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/32.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/32.md"  newLevelForH1="4"> </div>
   
 अमूर्विमानान्तरलम्बिनीनां श्रुत्वा स्वनं काञ्चनकिङ्किणीनाम् ।  
 प्रत्युद्द्रजन्तीव खमुत्पतन्त्यो गोदावरीसारसपङ्क्तयस्त्वाम् ॥ 33 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/33.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/33.md"  newLevelForH1="4"> </div>
   
 एषा त्वया पेशलमध्ययापि घटाम्बुसंवर्धितबालचूता ।  
 आनन्दयत्युन्मुखकृष्णसारा दृष्टा चिरात्पञ्चवटी मनो मे ॥ 34 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/34.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/34.md"  newLevelForH1="4"> </div>
   
 अत्रानुगोदं मृगयानिवृत्तस्तरंगवातेन विनीतखेदः ।  
 रहस्त्वदुत्सङ्गनिषण्णमूर्धा स्मरामि वानीरगृहेषु सुप्तः ॥ 35 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/35.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/35.md"  newLevelForH1="4"> </div>
   
 भ्रूमेदमात्रेण पदान्मघोनः प्रभ्रंशयां यो नहुषं चकार ।  
 तस्याविलाम्भः परिशुद्धिहेतोर्भौमो मुनेः स्थआनपरिग्रहोऽयम् ॥ 36 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/36.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/36.md"  newLevelForH1="4"> </div>
   
 त्रेताग्निधूमाग्रमनिन्द्यकीर्तेस्तस्येदमाक्रान्तविमानमार्गम् ।  
 घ्रात्वा हविर्गन्धि रजोविमुक्तः समश्नुते मेलघिमानमात्मा ॥ 37 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/37.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/37.md"  newLevelForH1="4"> </div>
   
 एतन्मुनेर्मानिनि! शातकर्णेः पञ्चाप्सरो नाम विहारवारि ।  
 आभाति पर्यन्तवनं विदूरान्मेघान्तरालक्ष्यमिवेन्दुबिम्बम् ॥ 38 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/38.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/38.md"  newLevelForH1="4"> </div>
   
 पुरा स दर्भाङ्कुरमात्रवृत्तिश्चरन्मृगैः सार्धमृषिर्मघोनाः ।  
 समाधिभीतेन किलोपनीतः पञ्चाप्सरोयौवनकूटबन्धम् ॥ 39 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/39.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/39.md"  newLevelForH1="4"> </div>
   
 तस्यायमन्तर्हितसौधभाजः प्रसक्तसंगीतमृदङ्गघोषः ।  
 वियद्गतः पुष्पकचन्द्रशालाः क्षणं प्रतिश्रुन्मुखराः करोति ॥ 40 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/40.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/40.md"  newLevelForH1="4"> </div>
   
 हविर्भुजामेधवतां चतुर्णां मध्ये ललाटंतपसप्तसप्तिः ।  
 असौ तपस्यत्यपरस्तपस्वी नाम्ना सुतीक्ष्णश्चरितेन दान्तः ॥ 41 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/41.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/41.md"  newLevelForH1="4"> </div>
   
 अमुं सहासप्रहितेक्षणानि व्याजार्धसंदर्शितमेखलानि ।  
 नालं विकर्तुं जनितेन्द्रशङ्कं सुराङ्गनाविभ्रमचेष्टितानि ॥ 42 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/42.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/42.md"  newLevelForH1="4"> </div>
   
 एषोऽक्षमालावलयं मृगाणां कण्डूयितारं कुशसूचिलावम् ।  
 सभाजने मे भुजमूर्ध्वबाहुः सव्येतरं प्राध्वमितः प्रयुङ्क्ते ॥ 43 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/43.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/43.md"  newLevelForH1="4"> </div>
   
 वाचंयमत्वात्प्रणतिं ममैष कम्पेन किंचित्प्रतिगृह्य मूर्ध्नः ।  
 दृष्टिं विमानव्यवधानमुक्तां पुनः सहस्रार्चिषि संनिधत्ते ॥ 44 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/44.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/44.md"  newLevelForH1="4"> </div>
   
 अदः शरण्यं शरभङ्गनाम्नस्तपोवनं पावनमाहिताग्नेः ।  
 चिराय संतर्प्य समिद्भिरग्निं यो मन्त्रपूतां तनुमप्यहौषीत् ॥ 45 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/45.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/45.md"  newLevelForH1="4"> </div>
   
 छायाविनीताध्वपरिश्रमेषु भूयिष्ठसंभाव्यफलेष्वमीषु ।  
 तस्यातिथीनामधुना सपर्या स्थइता सुपुत्रेष्विव पादपेषु ॥ 46 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/46.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/46.md"  newLevelForH1="4"> </div>
   
 धारास्वनोद्गारिदरीमुखोऽसौ श्रृङ्गाग्रलग्नाम्बुजवप्रपङ्कः ।  
 बध्नाति मे बन्धुरगात्रि! चक्षुर्दृप्तः ककुद्मानिव चित्रकूटः ॥ 47 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/47.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/47.md"  newLevelForH1="4"> </div>
   
 एषा प्रसन्नस्तिमितप्रवाहा सरिद्विदूरान्तरभावतन्वी ।  
 मन्दाकिनी भाति नगोपकण्ठे मुक्तावली कण्ठगतेव भूमेः ॥ 48 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/48.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/48.md"  newLevelForH1="4"> </div>
   
 अयं सुजातोऽनुगिरं तमालः प्रवालमादाय सुगन्धि यस्य ।  
 यवाङ्कुरापाण्डुकपोलशोभी मयावतंसः परिकल्पितस्ते ॥ 49 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/49.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/49.md"  newLevelForH1="4"> </div>
   
 अनिग्रहत्रासविनीतसत्त्वमपुष्पलिङ्गात्फलबन्धिवृक्षम् ।  
 वनं तपःसाधनमेतदत्रेराविष्कृतोदग्रतरप्रभावम् ॥ 50 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/50.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/50.md"  newLevelForH1="4"> </div>
   
 अत्राभिषेकाय तपोधनानां सप्तर्षिहस्तोद्धृतहेमपद्माम् ।  
 प्रवर्तयामास किलानसूया त्रिस्रोतसं त्र्यम्बकमौलिमालाम् ॥ 51 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/51.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/51.md"  newLevelForH1="4"> </div>
   
 वीरसनैर्ध्यानजुषामृषीणाममी समध्यासितवेदिमध्याः ।  
 निवातनिष्कम्पतया विभान्ति योगाधिरूढा इव शाखिनोऽपि ॥ 52 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/52.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/52.md"  newLevelForH1="4"> </div>
   
 त्वया पुरस्तादुपयाचितो यः सोऽयं वटः श्याम इति प्रतीतः ।  
 राशिर्मणीनामिव गारुडानां सपद्मरागः फलितो विभाति ॥ 53 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/53.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/53.md"  newLevelForH1="4"> </div>
   
 'क्वचित्-'इत्यादिभिश्चतुर्भिः श्लोकैः प्रयागे गङ्गायमुनासंगमं वर्णयति-  
 क्वचित्प्रभालेपिभिरिन्द्रनीलैर्मुक्तामयी यष्टिरिवानुविद्धा ।  
@@ -228,117 +228,119 @@ title = "१३"
 अन्यत्र शुभ्रा शरदभ्रलेखा रन्ध्रेष्विवालक्ष्यनभः प्रदेशा ॥ 56 ॥  
 क्वचिञ्च कृष्णोरगभूषणेव भस्माङ्गरागा तनुरीश्वरस्य ।  
 पश्यानवद्याङअगि! विभाति गङ्गा भिन्नप्रवाहा यमुनातरङ्गैः ॥ 57 ॥  
-हे अनवद्याङअगि! यमुनातरङ्गैर्भिन्नप्रवाहा व्यामिश्रौघा गङ्गा जाह्नवी विभाति। त्वं पशअय। केव? क्वचित्प्रदेशे प्रभया लिम्पन्ती संनिहितमिति प्रभालेपिभिरिन्द्रनीलैरनुविद्धा सह गुम्फिता मुक्तामयी यष्टिरिव हारावलिरिव विभाति। अन्यत्र प्रदेश इन्दीवरैर्नीलोत्पलैरुत्खचितान्तरा सह ग्रथिता सितपङ्कजानां पुण्डरीकाणां मालेव। विभातीति सर्वत्र संबन्धः। क्वचित्कादम्बसंसर्गवती नीलहंससंसृष्टा प्रियं मानसं नाम सरो येषां खगानां राजहंसानां पङ्क्तिरिव। 'राजहंसास्तु ते चञ्चुचरणैर्लोहितैः सिताः'इत्यमरः। अन्यत्र कालागुरुणा दत्त पत्रा रचितमकरिकापत्रा भुवश्चन्दनकल्पिता भक्तिरिव। क्वचिच्छायासु विलीनैः स्थितैस्तमोभिः शबलीकृता कर्बुरीकृता चान्द्रमसी प्रभा चन्द्रिकेव। अन्यत्र रन्ध्रेष्वालक्ष्यनभःप्रदेशा शुभ्रा शरदभ्रलेखा शरन्मेघपङ्क्तिरिव। क्वचित्कृष्णोरगभूषणा भस्माङ्गरागेश्वरस्य तनुरिव विभाति। शेषो व्याख्यातः। कलापकम् ॥ 54-57 ॥  
+
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/57.md"  newLevelForH1="4"> </div>
+
 समुद्रपत्न्योर्जलसंनिपाते पूतात्मनामत्र किलाभिषेकात् ।  
 तत्त्वावबोधेन विनापि भूयस्तनुत्यजां नास्ति शरीरबन्धः ॥ 58 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/58.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/58.md"  newLevelForH1="4"> </div>
   
 पुरं निषादाधिपतेरिदं तद्यस्मिन्मया मौलिमणिं विहाय ।  
 जटासु बद्धास्वरुदत्सुमन्त्रः कैकेयि! कामाः फलितास्तवेति ॥ 59 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/59.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/59.md"  newLevelForH1="4"> </div>
   
 पयोधरैः पुण्यजनाङ्गनानां निर्विष्टहेमाम्बुजरेणु यस्याः ।  
 ब्राह्मं सरः कारणमाप्तवाचो बुद्धेरिवाव्यक्तमुदाहरन्ति ॥ 60 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/60.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/60.md"  newLevelForH1="4"> </div>
   
 जलानि या तीरनिखातयूपा वहत्ययोध्यामनु राजधानीम् ।  
 तुरंगमेधावभृथावतीर्णैरिक्ष्वाकुभिः पुण्यतरीकृतानि ॥ 61 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/61.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/61.md"  newLevelForH1="4"> </div>
   
 यां सैकतोत्सङ्गसुखोचितानां प्राज्यैः पयोभिः परिवर्धितानाम् ।  
 सामान्यधात्रीमिव मानसं मे संभावयत्युत्तरकोसलानाम् ॥ 62 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/62.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/62.md"  newLevelForH1="4"> </div>
   
 सेयं मदीया जननीव तेन मान्येन राज्ञा सरयूर्वियुक्ता ।  
 दूरे वसन्तं शिशिरानिलैर्मां तरंगहस्तैरुपगूहतीव ॥ 63 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/63.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/63.md"  newLevelForH1="4"> </div>
   
 विरक्तसंध्याकपिशं परस्ताद्यतो रजः पार्थिवमुज्जिहीते ।  
 शङ्के हनूमत्कथितप्रवृत्तिः प्रत्युद्गतो मां भरतः ससैन्यः ॥ 64 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/64.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/64.md"  newLevelForH1="4"> </div>
   
 अद्धा श्रियं पालितसंगराव प्रत्यर्पयिष्यत्यनघां स साधुः ।  
 हत्वा निवृत्ताय मृधे खरादीन्संरक्षितां त्वामिव लक्ष्मणो मे ॥ 65 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/65.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/65.md"  newLevelForH1="4"> </div>
   
 असौ पुरस्कृत्य गुरुं पदातिः पश्चादवस्थापितवाहिनीकः ।  
 वृद्धैरमात्यैः सह चीरवासा मामर्ध्यपाणिर्भरतोऽभ्युपैति ॥ 66 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/66.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/66.md"  newLevelForH1="4"> </div>
   
 पित्रा विसृष्टां मदपेक्षया यः श्रियं युवाप्यङअकगतामभोक्ता ।  
 इयन्ति वर्षाणि तया सहोग्रमभ्यस्यतीव व्रतमासिधारम् ॥ 67 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/67.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/67.md"  newLevelForH1="4"> </div>
   
 एतावदुक्तवति दाशरथौ तदीया-  
       मिच्छां विमानमधिदेवतया विदित्वा ।  
 ज्योतिष्पथादवततार सविस्मयाभि-  
       रुद्धीक्षितं प्रकृतिभिर्भरतानुगाभिः ॥ 68 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/68.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/68.md"  newLevelForH1="4"> </div>
   
 तस्मात्पुरःसरबिभीषणदर्शितेन   
      सेवाविचक्षणहरीश्वरदत्तहस्तः ।  
 यानादवातरददूरमहीतलेन  
       मार्गेण भङ्गिरचितस्फटिकेन रामः ॥ 69 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/69.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/69.md"  newLevelForH1="4"> </div>
   
 इक्ष्वाकुवंशगुरवे प्रयतः प्रणम्य  
     स भ्रातरं भरतमर्घ्यपरिग्रहान्ते ।  
 पर्यश्रुरस्वजत मूर्धनि चोपजघ्नौ  
      तद्भक्त्यपोढपितृराज्यमहाभिषेके ॥ 70 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/70.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/70.md"  newLevelForH1="4"> </div>
   
 श्मश्रुप्रवृद्धिजनिताननविक्रियांश्च  
      प्लक्षान्प्ररोहजटिलानिव मन्त्रिवृद्धान् ।  
 अन्वग्रहीत्प्रणमतः शुभदृष्टिपातै-  
       वार्तानुयोगमधुराक्षरया च वाचा ॥ 71 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/71.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/71.md"  newLevelForH1="4"> </div>
   
 दुर्जातबन्धुरयमृक्षहरीश्वरो मे  
     पौलस्त्य एष समरेषु पुरःप्रहर्ता ।  
 इत्यादृतेन कथितौ रघुनन्दनेन  
       व्युत्क्रम्य लक्ष्मणमुभौ भरतो ववन्दे ॥ 72 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/72.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/72.md"  newLevelForH1="4"> </div>
   
 सौमित्रिणा तदनु संससृजे स चैन-  
       मुत्थाप्य नम्रशिरसं भृशमालिलिङ्ग ।  
 रूदेन्द्रजित्प्रहरणव्रणकर्कशेन  
        क्लिश्यन्निवास्य भुजमध्यमुरःस्थलेन ॥ 73 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/73.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/73.md"  newLevelForH1="4"> </div>
   
 रामाज्ञया हरिचमूपतयस्तदानीं  
       कृत्वा मनुष्यवपुरारुरुहुर्गजेन्द्रान् ।  
 तेषु क्षरत्सु बहुधा मदवारिधाराः  
        शैलाधिरोहणसुखान्युपलेभिरे ते ॥ 74 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/74.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/74.md"  newLevelForH1="4"> </div>
   
 सानुप्लवः प्रभुरपि क्षणदाचराणां  
      भेजे रथान्दशरथप्रभवानुशिष्टः ।  
 मायाविकल्परचितैरपि ये तदीयै-  
       र्न स्यन्दनैस्तुलितकृत्रिमभक्तिशोभाः ॥ 75 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/75.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/75.md"  newLevelForH1="4"> </div>
   
 भूयस्ततो रघुपतिर्विलसत्पताक-  
     मध्यास्त कामगति सावरजो विमानम् ।  
 दोषातनं बुधबृहस्पतियोगदृश्य-  
      स्तारापतिस्तरलविद्युदिवाभ्रवृन्दम् ॥ 76 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/76.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/76.md"  newLevelForH1="4"> </div>
   
 तत्रेश्वरेण जगतां प्रलयादिवोर्वीं  
      वर्षात्ययेन रुचमभ्रघनादिवेन्दोः ।  
 रामेण मैथिलसुतां दशकण्ठकृच्छ्रा-  
       त्प्रत्युद्धतां धृतिमतीं भरतो ववन्दे ॥ 77 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/77.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/77.md"  newLevelForH1="4"> </div>
   
 लङ्केश्वरप्रणतिभङ्गदृढव्रतं त-  
     द्वन्द्यं युगं चरणयोर्जनकात्मजायाः ।  
 ज्येष्ठानुवृत्तिजटिलं च शिरोऽस्य साधो-  
      रन्योन्यपावनमभूदुभयं समेत्य ॥ 78 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/78.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/78.md"  newLevelForH1="4"> </div>
   
 क्रोशार्धं प्रकृतिपुरःसरेण गत्वा  
     काकुत्स्थः स्तिमितजवेन पुष्पकेण ।  
 शत्रुघ्नप्रतिविहितोपकार्यमार्यः  
       साकेतोपवनमुदारमध्युवास ॥ 79 ॥  
-<div class="js_include collapsed" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/79.md"  newLevelForH1="4" title="मल्लिनाथ-टीका"  > </div>
+<div class="js_include" url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/13/79.md"  newLevelForH1="4"> </div>
   
 इति श्रीमहोपाध्यायकोलाचलमल्लिनाथसूरिविरचितायां रघुवंशव्याख्यायां संजीविनीसमाख्यायां त्रयोदशः सर्गः ।  
